open localization: commit translated files

--- a/docs/csharp/misc/cs0626.md
+++ b/docs/csharp/misc/cs0626.md
@@ -45,7 +45,7 @@ ms.lasthandoff: 03/13/2017
   
  次の例では CS0626 が生成されます。  
   
-```cs
+```csharp
 // CS0626.cs  
 // compile with: /warnaserror  
 using System.Runtime.InteropServices;  
