--- a/docs/csharp/misc/cs0168.md
+++ b/docs/csharp/misc/cs0168.md
@@ -42,7 +42,7 @@ ms.lasthandoff: 03/13/2017
   
 次の例では、CS0168 警告が生成されます。  
   
-```cs
+```csharp
 // CS0168.cs  
 // compile with: /W:3  
 public class clx
