open localization: commit translated files

--- a/docs/csharp/language-reference/compiler-messages/cs4014.md
+++ b/docs/csharp/language-reference/compiler-messages/cs4014.md
@@ -30,9 +30,10 @@ translation.priority.mt:
 - pl-pl
 - pt-br
 - tr-tr
-translationtype: Human Translation
+ms.translationtype: Human Translation
 ms.sourcegitcommit: a06bd2a17f1d6c7308fa6337c866c1ca2e7281c0
 ms.openlocfilehash: 906c71b437600023c27dcbaf4451aa9acb11b0ef
+ms.contentlocale: ja-jp
 ms.lasthandoff: 03/13/2017
 
 ---
@@ -50,7 +51,6 @@ ms.lasthandoff: 03/13/2017
  次の例で、警告を発生させる方法、警告を抑制する方法、呼び出しを待機する方法を示します。  
   
 ```csharp  
-  
 async Task CallingMethodAsync()  
 {  
     resultsTextBox.Text += "\r\n  Entering calling method.";  
@@ -105,7 +105,6 @@ async Task CalledMethodAsync(int howLong)
  この例では、呼び出し 1 または呼び出し 2 を選択した場合、完了が待機されない非同期メソッド (`CalledMethodAsync`) は、呼び出し元 (`CallingMethodAsync`) と呼び出し元の呼び出し元 (`startButton_Click`) の両方が完了した後に完了します。 次の出力の最後の行に、呼び出されたメソッドがいつ完了したかが示されています。 この出力には、完全な例の `CallingMethodAsync` を呼び出すイベント ハンドラーへのエントリとその終了が示されています。  
   
 ```  
-  
 Entering the Click event handler.  
   Entering calling method.  
     Entering called method, starting and awaiting Task.Delay.  
@@ -246,7 +245,6 @@ Exiting the Click event handler.
         //   Returning from calling method.  
         // Exiting the Click event handler.  
     }  
-  
     ```  
   
 5.  F5 キーを押してプログラムを実行し、 **[Start]** を複数回クリックします。  
@@ -256,3 +254,4 @@ Exiting the Click event handler.
 ## <a name="see-also"></a>関連項目  
  [await](../../../csharp/language-reference/keywords/await.md)   
  [Async および Await を使用した非同期プログラミング](../../../csharp/programming-guide/concepts/async/index.md)
+
