open localization: commit translated files

--- a/docs/csharp/language-reference/compiler-messages/cs0311.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0311.md
@@ -1,34 +1,53 @@
 ---
-title: "Compiler Error CS0311 | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-csharp"
-ms.topic: "error-reference"
-f1_keywords: 
-  - "CS0311"
-dev_langs: 
-  - "CSharp"
-helpviewer_keywords: 
-  - "CS0311"
+title: "コンパイラ エラー CS0311 | Microsoft Docs"
+ms.date: 2015-07-20
+ms.prod: .net
+ms.technology:
+- devlang-csharp
+ms.topic: error-reference
+f1_keywords:
+- CS0311
+dev_langs:
+- CSharp
+helpviewer_keywords:
+- CS0311
 ms.assetid: d095f0fa-efd7-491c-a80b-4c5704a90de7
 caps.latest.revision: 7
-author: "BillWagner"
-ms.author: "wiwagn"
-caps.handback.revision: 7
+author: BillWagner
+ms.author: wiwagn
+translation.priority.ht:
+- cs-cz
+- de-de
+- es-es
+- fr-fr
+- it-it
+- ja-jp
+- ko-kr
+- pl-pl
+- pt-br
+- ru-ru
+- tr-tr
+- zh-cn
+- zh-tw
+ms.translationtype: Human Translation
+ms.sourcegitcommit: a780a11d8dd238187eb82933359bbb151bb3c333
+ms.openlocfilehash: 0fe855bf4d2d7aecbdfd2565a0185ef44f9e6725
+ms.contentlocale: ja-jp
+ms.lasthandoff: 05/22/2017
+
 ---
-# Compiler Error CS0311
-型"型 1 "はジェネリック型またはジェネリック メソッドの型パラメーター名' T としては使用できません '\<\>'。'型 1' から '型 2' への暗黙的な参照変換がありません。  
+# <a name="compiler-error-cs0311"></a>コンパイラ エラー CS0311
+型 'type1' をジェネリック型の型パラメーター 'T' またはメソッド '\<name>' として使用することはできません。 'type1' から 'type2' への暗黙的な参照変換がありません。  
   
  ジェネリック型パラメーターに制約を適用する場合は、具象型の引数から制約の型への暗黙的な ID 変換または参照変換が必要です。  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a>このエラーを解決するには  
   
 1.  使用している引数を変更してクラスを作成します。  
   
-2.  クラスがある場合は、制約またはその他の操作を削除し、暗黙的な参照変換または ID 変換を有効にできます。  たとえば、最初の型から 2 番目の型を継承できます。  
+2.  クラスがある場合は、制約またはその他の操作を削除し、暗黙的な参照変換または ID 変換を有効にできます。 たとえば、最初の型から 2 番目の型を継承できます。  
   
-## 使用例  
+## <a name="example"></a>例  
   
 ```  
 // cs0311.cs  
@@ -46,7 +65,7 @@ class Program
 }  
 ```  
   
- 値型引数を使用するときにこのエラーが発生する場合、たとえば、`short` から `int` への暗黙的な数値変換が、ジェネリック型パラメーターに適合しているかどうかを確認してください。  
+ 値型引数を使用するときにこのエラーが発生する場合は、暗黙的な数値変換 (たとえば、`short` から `int` への変換) が、ジェネリック型パラメーターの条件を満たしていません。  
   
-## 参照  
+## <a name="see-also"></a>関連項目  
  [型パラメーターの制約](../../../csharp/programming-guide/generics/constraints-on-type-parameters.md)
