--- a/docs/csharp/language-reference/compiler-messages/cs4014.md
+++ b/docs/csharp/language-reference/compiler-messages/cs4014.md
@@ -31,18 +31,18 @@ translation.priority.mt:
 - pt-br
 - tr-tr
 ms.translationtype: Human Translation
-ms.sourcegitcommit: a06bd2a17f1d6c7308fa6337c866c1ca2e7281c0
-ms.openlocfilehash: 906c71b437600023c27dcbaf4451aa9acb11b0ef
+ms.sourcegitcommit: 400dfda51d978f35c3995f90840643aaff1b9c13
+ms.openlocfilehash: 75a6f54b1ea7ea94cfbc56775254240c0a828269
 ms.contentlocale: ja-jp
-ms.lasthandoff: 03/13/2017
+ms.lasthandoff: 05/22/2017
 
 ---
 # <a name="compiler-warning-level-1-cs4014"></a>コンパイラの警告 (レベル 1) CS4014
 この呼び出しは待機されなかったため、現在のメソッドの実行は呼び出しの完了を待たずに続行されます。 呼び出しの結果に 'await' 演算子を適用することを検討してください。  
   
- 現在のメソッドでは、<xref:System.Threading.Tasks.Task> または <xref:System.Threading.Tasks.Task%601> を返す非同期メソッドが呼び出され、その結果に [await](../../../csharp/language-reference/keywords/await.md) 演算子が適用されません。 この非同期メソッドの呼び出しは、非同期タスクを開始します。 ただし、`await` 演算子が適用されないため、プログラムはタスクの完了を待たずに処理を続行します。 ほとんどの場合、この動作は想定されるものではありません。 通常は、呼び出し元のメソッドの他の側面が呼び出しの結果に依存します。また、最低でも、呼び出しを含むメソッドから制御が返される前に、呼び出されたメソッドが完了することが想定されます。  
+ 現在のメソッドは <xref:System.Threading.Tasks.Task> または <xref:System.Threading.Tasks.Task%601> を返す非同期メソッドを呼び出し、[Await](../../../csharp/language-reference/keywords/await.md) 演算子を結果に適用しません。 この非同期メソッドの呼び出しは、非同期タスクを開始します。 ただし、`await` 演算子が適用されないため、プログラムはタスクの完了を待たずに処理を続行します。 ほとんどの場合、この動作は想定されるものではありません。 通常は、呼び出し元のメソッドの他の側面が呼び出しの結果に依存します。また、最低でも、呼び出しを含むメソッドから制御が返される前に、呼び出されたメソッドが完了することが想定されます。  
   
- 同様に、呼び出された非同期メソッドで発生した例外に対する処理も重要です。 <xref:System.Threading.Tasks.Task> または <xref:System.Threading.Tasks.Task%601> を返すメソッドで発生した例外は、返されたタスクに格納されます。 このタスクが返されるのを待たない場合や例外を明示的にチェックしない場合、例外は失われます。 このタスクが返されるのを待機する場合は、例外が再スローされます。  
+ 同様に、呼び出された非同期メソッドで発生した例外に対する処理も重要です。 <xref:System.Threading.Tasks.Task> または <xref:System.Threading.Tasks.Task%601> を返すメソッド内で発生した例外は、返されたタスクに格納されます。 このタスクが返されるのを待たない場合や例外を明示的にチェックしない場合、例外は失われます。 このタスクが返されるのを待機する場合は、例外が再スローされます。  
   
  ベスト プラクティスとしては、常に呼び出しを待機する必要があります。  
   
