open localization: commit translated files

--- a/docs/csharp/language-reference/compiler-messages/cs2032.md
+++ b/docs/csharp/language-reference/compiler-messages/cs2032.md
@@ -1,45 +1,62 @@
 ---
-title: "Compiler Error CS2032 | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-csharp"
-ms.topic: "error-reference"
-f1_keywords: 
-  - "CS2032"
-dev_langs: 
-  - "CSharp"
-helpviewer_keywords: 
-  - "CS2032"
+title: "コンパイラ エラー CS2032 | Microsoft Docs"
+ms.date: 2015-07-20
+ms.prod: .net
+ms.technology:
+- devlang-csharp
+ms.topic: error-reference
+f1_keywords:
+- CS2032
+dev_langs:
+- CSharp
+helpviewer_keywords:
+- CS2032
 ms.assetid: 534e2d2f-d209-43dd-abc9-e5ea5b01efc4
 caps.latest.revision: 14
-author: "BillWagner"
-ms.author: "wiwagn"
-caps.handback.revision: 14
+author: BillWagner
+ms.author: wiwagn
+translation.priority.ht:
+- cs-cz
+- de-de
+- es-es
+- fr-fr
+- it-it
+- ja-jp
+- ko-kr
+- pl-pl
+- pt-br
+- ru-ru
+- tr-tr
+- zh-cn
+- zh-tw
+ms.translationtype: Human Translation
+ms.sourcegitcommit: 7e33ed084c560470a486ebbb25035a59ddc18565
+ms.openlocfilehash: 685b5947aaf18ef26d9548b42686d03749abfdf9
+ms.contentlocale: ja-jp
+ms.lasthandoff: 05/22/2017
+
 ---
-# Compiler Error CS2032
+# <a name="compiler-error-cs2032"></a>コンパイラ エラー CS2032
 文字 'character' は、コマンド ラインまたは応答ファイルに許可されていません  
   
- csc.exe の応答ファイルとコマンド ライン オプションは、範囲、またはパイプで ASCII 制御文字を含めることはできません。       `|` \) 文字を使用することはできません。  
+ csc.exe の応答ファイルとコマンド ライン オプションには、0 から 31 の範囲の ASCII 制御文字を含めることができません。また、パイプ (`|`) 文字は使用できません。  
   
- コマンド ライン プロセッサと統合開発環境 \(IDE\) が無効な文字を取り除くためコンパイラ CS2032 エラーはコマンド ラインからしにくくなります。  次の手順では [応答ファイル](../../../csharp/language-reference/compiler-options/response-file-compiler-option.md)を使用してエラーを生成します。  
+ コマンド ライン プロセッサと統合開発環境 (IDE) では、無効な文字が取り除かれるため、コマンド ラインからコンパイラ エラー CS2032 を再現することは困難です。 次の手順では、[応答ファイル](../../../csharp/language-reference/compiler-options/response-file-compiler-option.md)を使用してエラーを生成します。  
   
-### このエラーを生成するには  
+### <a name="to-generate-this-error"></a>このエラーを生成するには  
   
-1.  **\[マイ ドキュメント\]** フォルダーで、CS2032.rsp というファイルが作成され、その中で次にコンパイラ オプションを入力します。テキスト ファイルを:  
+1.  **My Documents** フォルダーに CS2032.rsp というテキスト ファイルを作成し、そのファイルに次のコンパイラ オプションを入力します。  
   
-    ```c#  
+    ```csharp  
     /target:exe /out:cs|2032.exe cs2032.cs  
     ```  
   
-2.  **\[マイ ドキュメント\]** フォルダーで、目的のデータはすべて cs2032.cs という含まれ、テキスト ファイルを作成します。  
+2.  **My Documents** フォルダーに cs2032.cs というテキスト ファイルを作成し、任意の必要な内容を入力します。  
   
-3.  **\[開始\]** を開き、**\[Microsoft Visual Studio 2010\]**、**\[Visual Studio ツール\]**、**\[Visual Studio コマンド プロンプト\]\[すべてのプログラム\]** をクリックします。  
+3.  **[スタート]** メニューを開きます。 [Visual Studio の開発者コマンド プロンプト](https://msdn.microsoft.com/library/ms229859(v=vs.110).aspx)を探して選択します。
   
-     **\[Visual Studio 2005 コマンド プロンプト\]** ウィンドウが表示されます。  
+4.  現在のディレクトリ `C:\Users\\<YourUsername>\Documents` に移動します。  
   
-4.  **\[Visual Studio コマンド プロンプト\]** ウィンドウで、C:\\Users\\*YourUsername*の\\Documents を現在のディレクトリに変更します。  
+5.  コマンド プロンプトから次のコマンドを実行します。`csc @cs2032.rsp`  
   
-5.  **\[Visual Studio コマンド プロンプト\]** から次のコマンドを実行する: `csc @cs2032.rsp`  
-  
-6.  CS2032 エラー メッセージが応答ファイル、CS2032.rsp が、パイプ文字が含まれているために表示されます。
+6.  応答ファイル CS2032.rsp にパイプ文字が含まれているため、CS2032 エラー メッセージが表示されます。
