open localization: commit translated files

--- a/docs/csharp/language-reference/compiler-messages/cs1936.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1936.md
@@ -50,7 +50,7 @@ ms.lasthandoff: 05/22/2017
 ## <a name="example"></a>例  
  次の例では CS1936 が生成されます。  
   
-```  
+```csharp  
 // cs1936.cs  
 using System.Collections;  
 using System.Linq;  
