--- a/docs/csharp/language-reference/compiler-messages/cs4014.md
+++ b/docs/csharp/language-reference/compiler-messages/cs4014.md
@@ -104,7 +104,7 @@ async Task CalledMethodAsync(int howLong)
   
  この例では、呼び出し 1 または呼び出し 2 を選択した場合、完了が待機されない非同期メソッド (`CalledMethodAsync`) は、呼び出し元 (`CallingMethodAsync`) と呼び出し元の呼び出し元 (`startButton_Click`) の両方が完了した後に完了します。 次の出力の最後の行に、呼び出されたメソッドがいつ完了したかが示されています。 この出力には、完全な例の `CallingMethodAsync` を呼び出すイベント ハンドラーへのエントリとその終了が示されています。  
   
-```  
+```console  
 Entering the Click event handler.  
   Entering calling method.  
     Entering called method, starting and awaiting Task.Delay.  
