--- a/docs/csharp/language-reference/compiler-messages/cs0311.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0311.md
@@ -1,5 +1,5 @@
 ---
-title: "コンパイラ エラー CS0311 | Microsoft Docs"
+title: "コンパイラ エラー CS0311"
 ms.date: 2015-07-20
 ms.prod: .net
 ms.technology:
@@ -29,11 +29,11 @@ translation.priority.ht:
 - tr-tr
 - zh-cn
 - zh-tw
-ms.translationtype: Human Translation
-ms.sourcegitcommit: a780a11d8dd238187eb82933359bbb151bb3c333
-ms.openlocfilehash: 0fe855bf4d2d7aecbdfd2565a0185ef44f9e6725
+ms.translationtype: HT
+ms.sourcegitcommit: 306c608dc7f97594ef6f72ae0f5aaba596c936e1
+ms.openlocfilehash: c7d50b0066e25c1bb23003b24152398100b68906
 ms.contentlocale: ja-jp
-ms.lasthandoff: 05/22/2017
+ms.lasthandoff: 07/28/2017
 
 ---
 # <a name="compiler-error-cs0311"></a>コンパイラ エラー CS0311
@@ -69,3 +69,4 @@ class Program
   
 ## <a name="see-also"></a>関連項目  
  [型パラメーターの制約](../../../csharp/programming-guide/generics/constraints-on-type-parameters.md)
+
