open localization: commit translated files

--- a/docs/csharp/language-reference/compiler-messages/cs2032.md
+++ b/docs/csharp/language-reference/compiler-messages/cs2032.md
@@ -30,10 +30,10 @@ translation.priority.ht:
 - zh-cn
 - zh-tw
 ms.translationtype: HT
-ms.sourcegitcommit: 306c608dc7f97594ef6f72ae0f5aaba596c936e1
-ms.openlocfilehash: fb1fbf3a40267416ba95dddf4102cb1df95f00d1
+ms.sourcegitcommit: 6170e096e36f8d054fdfe9cbd8311e6492e32a04
+ms.openlocfilehash: 9dff7bc7d492745d62dddb1954081c28b407dd45
 ms.contentlocale: ja-jp
-ms.lasthandoff: 07/28/2017
+ms.lasthandoff: 08/28/2017
 
 ---
 # <a name="compiler-error-cs2032"></a>コンパイラ エラー CS2032
@@ -53,7 +53,7 @@ ms.lasthandoff: 07/28/2017
   
 2.  **My Documents** フォルダーに cs2032.cs というテキスト ファイルを作成し、任意の必要な内容を入力します。  
   
-3.  **[スタート]** メニューを開きます。 [Visual Studio の開発者コマンド プロンプト](https://msdn.microsoft.com/library/ms229859(v=vs.110).aspx)を探して選択します。
+3.  **[スタート]** メニューを開きます。 [Visual Studio の開発者コマンド プロンプト](../../../framework/tools/developer-command-prompt-for-vs.md)を探して選択します。
   
 4.  現在のディレクトリ `C:\Users\\<YourUsername>\Documents` に移動します。  
   
