Commit translated content

--- a/docs/visual-basic/misc/bc33038.md
+++ b/docs/visual-basic/misc/bc33038.md
@@ -1,52 +1,54 @@
 ---
-title: "型 &#39;&lt;typename&gt;&#39; を &#39;For&#39; ステートメントで使用するには、演算子 &#39;&lt;operator&gt;&#39; を定義しなければなりません | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-visual-basic"
-ms.topic: "article"
-f1_keywords: 
-  - "vbc33038"
-  - "BC33038"
-helpviewer_keywords: 
-  - "BC33038"
+title: "型 &#39;&lt;typename&gt;&#39; 演算子 &#39; を定義する必要があります&lt;演算子&gt;&#39; で使用する、&#39;です。&#39;です。ステートメント"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-visual-basic
+ms.topic: article
+f1_keywords:
+- vbc33038
+- BC33038
+helpviewer_keywords: BC33038
 ms.assetid: b1c9d87f-80f9-4c8c-8908-f8400b9fe4c5
-caps.latest.revision: 8
-author: "stevehoag"
-ms.author: "shoag"
-caps.handback.revision: 8
+caps.latest.revision: "8"
+author: dotnet-bot
+ms.author: dotnetcontent
+ms.openlocfilehash: 26303440d600f40cd1fd8ed8b9ece02364609f32
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# 型 &#39;&lt;typename&gt;&#39; を &#39;For&#39; ステートメントで使用するには、演算子 &#39;&lt;operator&gt;&#39; を定義しなければなりません
+# <a name="type-39lttypenamegt39-must-define-operator-39ltoperatorgt39-to-be-used-in-a-39for39-statement"></a>型 &#39;&lt;typename&gt;&#39; 演算子 &#39; を定義する必要があります&lt;演算子&gt;&#39; で使用する、&#39;です。&#39;です。ステートメント
 `For` ループが、必要な演算子をサポートしていない型のカウンター変数を指定しています。  
   
  `For` ループ内のカウンター変数は、次の演算子のすべてをサポートする任意のデータ型にすることができます。  
   
--   以上 \(`>=`\)  
+-   以上 (`>=`)  
   
--   以下 \(`<=`\)  
+-   以下 (`<=`)  
   
--   加算 \(`+`\)  
+-   加算 (`+`)  
   
--   減算 \(`-`\)  
+-   減算 (`-`)  
   
  カウンター変数に数値データ型を使用する場合、先行するすべての演算子がサポートされます。 ユーザー定義のクラスまたは構造体を使用する場合、そのクラスまたは構造体の先行するすべての演算子を定義する必要があります。  
   
- `For` ステートメント内の `start`、`end`、および `step` 式のデータ型はカウンター変数のデータ型に拡大変換する必要があることにも注意してください。 カウンター変数がユーザー定義のクラスまたは構造体で、`start`、`end`、または `step` 式が異なる型である場合、`CType` 変換演算子を定義して、必要な変換を実現する必要があります。  
+ `start`ステートメント内の `end`、 `step` 、および `For` 式のデータ型はカウンター変数のデータ型に拡大変換する必要があることにも注意してください。 カウンター変数がユーザー定義のクラスまたは構造体で、 `start`、 `end`、または `step` 式が異なる型である場合、 `CType` 変換演算子を定義して、必要な変換を実現する必要があります。  
   
  **エラー ID:** BC33038  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a>このエラーを解決するには  
   
 1.  カウンター変数のデータ型のスペルが正しいことを確認します。  
   
 2.  ユーザー定義のクラスまたは構造体をカウンター変数に使用する場合は、そのクラスまたは構造体に必要なすべての演算子を定義します。  
   
-3.  `start`、`end`、および `step` 式のデータ型によっては、それらをカウンター変数のデータ型に変換するための 1 つ以上の `CType` 変換演算子を定義する必要がある場合があります。  
+3.  `start`、 `end`、および `step` 式のデータ型によっては、それらをカウンター変数のデータ型に変換するための 1 つ以上の `CType` 変換演算子を定義する必要がある場合があります。  
   
-## 参照  
- [For...Next ステートメント](../../visual-basic/language-reference/statements/for-next-statement.md)   
- [Operator Procedures](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)   
- [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md)   
- [How to: Define an Operator](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)   
- [How to: Define a Conversion Operator](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)   
+## <a name="see-also"></a>関連項目  
+ [For...Next ステートメント](../../visual-basic/language-reference/statements/for-next-statement.md)  
+ [演算子プロシージャ](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
+ [Operator ステートメント](../../visual-basic/language-reference/statements/operator-statement.md)  
+ [方法 : 演算子を定義する](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
+ [方法 : 変換演算子を定義する](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)  
  [CType 関数](../../visual-basic/language-reference/functions/ctype-function.md)
