--- a/docs/visual-basic/misc/bc42315.md
+++ b/docs/visual-basic/misc/bc42315.md
@@ -1,34 +1,36 @@
 ---
-title: "XML コメント タグ &#39;returns&#39; は、&#39;declare sub&#39; 言語要素では許可されていません | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-visual-basic"
-ms.topic: "article"
-f1_keywords: 
-  - "bc42315"
-  - "vbc42315"
-helpviewer_keywords: 
-  - "BC42315"
+title: "XML コメント タグ &#39; を返します、&#39;許可されていません、&#39; sub &#39; の宣言言語要素"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-visual-basic
+ms.topic: article
+f1_keywords:
+- bc42315
+- vbc42315
+helpviewer_keywords: BC42315
 ms.assetid: 55ba3e8a-ba7f-42e3-a4a7-b22844e72564
-caps.latest.revision: 10
-author: "stevehoag"
-ms.author: "shoag"
-caps.handback.revision: 10
+caps.latest.revision: "10"
+author: dotnet-bot
+ms.author: dotnetcontent
+ms.openlocfilehash: 3b9b9627cdfa8ee83e88b8ec707b2143ccbf5a07
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# XML コメント タグ &#39;returns&#39; は、&#39;declare sub&#39; 言語要素では許可されていません
+# <a name="xml-comment-tag-39returns39-is-not-permitted-on-a-39declare-sub39-language-element"></a>XML コメント タグ &#39; を返します、&#39;許可されていません、&#39; sub &#39; の宣言言語要素
 XML コメント タグ 'returns' は、'declare sub' 言語要素では許可されていません。 XML コメントは無視されます。  
   
- `Declare Sub` 宣言に対する XML コメントに、`<`returns`>` タグを含めることはできません。  
+ `Declare Sub` 宣言に対する XML コメントに、 `<`returns`>` タグを含めることはできません。  
   
  **エラー ID:** BC42315  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a>このエラーを解決するには  
   
 -   サポートされていない `<`returns`>` タグを削除します。  
   
-## 参照  
- [\<returns\>](../../visual-basic/language-reference/xmldoc/returns.md)   
- [XML Comment Tags](../../visual-basic/language-reference/xmldoc/recommended-xml-tags-for-documentation-comments.md)   
- [Documenting Your Code with XML](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)   
- [Declare Statement](../../visual-basic/language-reference/statements/declare-statement.md)
+## <a name="see-also"></a>関連項目  
+ [\<returns>](../../visual-basic/language-reference/xmldoc/returns.md)  
+ [XML のコメント用タグ](../../visual-basic/language-reference/xmldoc/recommended-xml-tags-for-documentation-comments.md)  
+ [XML の使用によるコードのドキュメントの作成](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)  
+ [Declare ステートメント](../../visual-basic/language-reference/statements/declare-statement.md)
