--- a/docs/visual-basic/misc/bc30305.md
+++ b/docs/visual-basic/misc/bc30305.md
@@ -1,30 +1,32 @@
 ---
-title: "&#39;&lt;method1&gt;&#39; および &#39;&lt;method2&gt;&#39; は、省略可能なパラメーターの既定値しか異ならないため、互いをオーバーロードすることはできません | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-visual-basic"
-ms.topic: "article"
-f1_keywords: 
-  - "vbc30305"
-  - "bc30305"
-helpviewer_keywords: 
-  - "BC30305"
+title: "&#39;です。&lt;method1&gt;&#39; と &#39;&lt;method2&gt;&#39; 省略可能なパラメーターの既定値のみが異なるために、お互いをオーバー ロードすることはできません"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-visual-basic
+ms.topic: article
+f1_keywords:
+- vbc30305
+- bc30305
+helpviewer_keywords: BC30305
 ms.assetid: f07f925e-9f95-4885-bdba-eaba2d0483d8
-caps.latest.revision: 8
-author: "stevehoag"
-ms.author: "shoag"
-caps.handback.revision: 8
+caps.latest.revision: "8"
+author: dotnet-bot
+ms.author: dotnetcontent
+ms.openlocfilehash: b48b1407c89365c9f80d9b77c6723ecb6303320a
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# &#39;&lt;method1&gt;&#39; および &#39;&lt;method2&gt;&#39; は、省略可能なパラメーターの既定値しか異ならないため、互いをオーバーロードすることはできません
+# <a name="39ltmethod1gt39-and-39ltmethod2gt39-cannot-overload-each-other-because-they-differ-only-by-the-default-values-of-optional-parameters"></a>&#39;です。&lt;method1&gt;&#39; と &#39;&lt;method2&gt;&#39; 省略可能なパラメーターの既定値のみが異なるために、お互いをオーバー ロードすることはできません
 オーバーロードしようとしたメソッドは、省略可能なパラメータしか異なっていません。 省略可能なパラメーターを持つメソッドは、省略可能なパラメーターを持つバージョンと持たないバージョンの 2 つのオーバーロードされたメソッドと同じです。 このため、いずれかのバージョンの引数リストと一致する引数リストを使ってメソッドをオーバーロードすることはできません。  
   
  **エラー ID:** BC30305  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a>このエラーを解決するには  
   
 -   省略可能なパラメーター以外の部分が異なっているメソッドでオーバーロードします。  
   
-## 参照  
- [Procedure Overloading](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)   
- [Considerations in Overloading Procedures](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
+## <a name="see-also"></a>関連項目  
+ [プロシージャのオーバーロード](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)  
+ [プロシージャのオーバーロードに関する注意事項](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
