--- a/docs/visual-basic/misc/bc30934.md
+++ b/docs/visual-basic/misc/bc30934.md
@@ -1,42 +1,25 @@
 ---
-title: "変換 &quot;&lt;type1&gt;&quot;to&quot;&lt;type2&gt;&quot; 属性に引数として使用される定数式では発生しません。Microsoft ドキュメント"
-ms.date: 2015-07-20
+title: "変換 &#39;&lt;type1&gt;&#39; の &#39;&lt;type2&gt;&#39; 属性に引数として使用される定数式で発生することはできません"
+ms.date: 07/20/2015
 ms.prod: .net
-ms.technology:
-- devlang-visual-basic
+ms.technology: devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - bc30934
 - vbc30934
-helpviewer_keywords:
-- BC30934
+helpviewer_keywords: BC30934
 ms.assetid: 120e05f9-1d0e-4800-b05c-a8373e286b9b
-caps.latest.revision: 8
+caps.latest.revision: "8"
 author: dotnet-bot
 ms.author: dotnetcontent
-translation.priority.ht:
-- de-de
-- es-es
-- fr-fr
-- it-it
-- ja-jp
-- ko-kr
-- ru-ru
-- zh-cn
-- zh-tw
-translation.priority.mt:
-- cs-cz
-- pl-pl
-- pt-br
-- tr-tr
-translationtype: Machine Translation
-ms.sourcegitcommit: a06bd2a17f1d6c7308fa6337c866c1ca2e7281c0
-ms.openlocfilehash: e546751c0b7dfd165fca4ad9c46536171571f9f9
-ms.lasthandoff: 03/13/2017
-
+ms.openlocfilehash: 0b0296921e74d92cc7c655c005edd06b4c429555
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# <a name="conversion-from-39lttype1gt39-to-39lttype2gt39-cannot-occur-in-a-constant-expression-used-as-an-argument-to-an-attribute"></a>変換 '&lt;type1&gt;'to'&lt;type2&gt;' 属性に引数として使用される定数式では発生しません
-属性引数に使用される式は、対応する属性のパラメーターと異なるデータ型に評価し、[!INCLUDE[vbprvb](../../csharp/programming-guide/concepts/linq/includes/vbprvb_md.md)]属性引数に必要な型変換はできません。  
+# <a name="conversion-from-39lttype1gt39-to-39lttype2gt39-cannot-occur-in-a-constant-expression-used-as-an-argument-to-an-attribute"></a>変換 &#39;&lt;type1&gt;&#39; の &#39;&lt;type2&gt;&#39; 属性に引数として使用される定数式で発生することはできません
+属性引数に使用される式が、対応する属性パラメーターのものとは異なるデータ型に評価されます。 [!INCLUDE[vbprvb](~/includes/vbprvb-md.md)] では、属性引数に必要な型変換を実施できません。  
   
  属性はその属性に適用される要素のメタデータを提供し、コンパイラはコンパイル時にそのすべてのメタデータを構築できる必要があります。 このため、すべての属性がコンパイル時に定数となる値を使用する必要があり、したがって、すべての属性引数がコンパイル時の定数値に評価される必要があります。  
   
@@ -49,7 +32,7 @@ ms.lasthandoff: 03/13/2017
 -   属性で定義されているとおりに、対応するパラメーターと同じデータ型に評価される式を使用します。  
   
 ## <a name="see-also"></a>関連項目  
- [Visual Basic でのビルドなし: 属性](http://msdn.microsoft.com/en-us/620bfc0e-4582-4c8b-8432-ebc5c3dccc22)   
- [属性のない IN ビルド: アプリケーション](http://msdn.microsoft.com/en-us/2b1703ed-4437-49b3-bc0b-568094324f47)   
- [Const ステートメント](../../visual-basic/language-reference/statements/const-statement.md)   
- [Visual Basic における型変換](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+ [属性の概要](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)  
+ [ビルド内にありません: 属性の適用](http://msdn.microsoft.com/en-us/2b1703ed-4437-49b3-bc0b-568094324f47)  
+ [Const ステートメント](../../visual-basic/language-reference/statements/const-statement.md)  
+ [Visual Basic での型変換](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
