--- a/docs/visual-basic/misc/bc30960.md
+++ b/docs/visual-basic/misc/bc30960.md
@@ -1,41 +1,24 @@
 ---
-title: "&quot;&lt;elementname&gt;&quot;を入力する参照&quot;&lt;typename&gt;&quot;project&quot; の&lt;projectname&gt;&quot;、型が、&quot;&lt;typename&gt;&quot;に見つからなかったプロジェクト&quot;&lt;projectname&gt;&quot; |Microsoft ドキュメント"
-ms.date: 2015-07-20
+title: "&#39;です。&lt;elementname&gt;&#39; 参照の種類 &#39;&lt;typename&gt;&#39; プロジェクト &#39;&lt;projectname&gt;&#39;以外の場合が、型 &#39;&lt;typename&gt;&#39; プロジェクト &#39; に見つかりませんでした&lt;projectname&gt;&#39;です。"
+ms.date: 07/20/2015
 ms.prod: .net
-ms.technology:
-- devlang-visual-basic
+ms.technology: devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - vbc30960
 - bc30960
-helpviewer_keywords:
-- BC30960
+helpviewer_keywords: BC30960
 ms.assetid: 4ed4bff5-c670-46f6-8360-7287444d50e5
-caps.latest.revision: 6
+caps.latest.revision: "6"
 author: dotnet-bot
 ms.author: dotnetcontent
-translation.priority.ht:
-- de-de
-- es-es
-- fr-fr
-- it-it
-- ja-jp
-- ko-kr
-- ru-ru
-- zh-cn
-- zh-tw
-translation.priority.mt:
-- cs-cz
-- pl-pl
-- pt-br
-- tr-tr
-translationtype: Machine Translation
-ms.sourcegitcommit: a06bd2a17f1d6c7308fa6337c866c1ca2e7281c0
-ms.openlocfilehash: c4ab50e8ada19e5d9ea4b1e869875d3df682cf65
-ms.lasthandoff: 03/13/2017
-
+ms.openlocfilehash: 3fdac14b46ab45b776f3a21ec4bc8b833e4d8cc0
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# <a name="39ltelementnamegt39-refers-to-type-39lttypenamegt39-in-project-39ltprojectnamegt39-but-type-39lttypenamegt39-was-not-found-in-project-39ltprojectnamegt39"></a>'&lt;elementname&gt;'を入力する参照'&lt;typename&gt;'project' の&lt;projectname&gt;'、型が、'&lt;typename&gt;'に見つからなかったプロジェクト'&lt;projectname&gt;'
+# <a name="39ltelementnamegt39-refers-to-type-39lttypenamegt39-in-project-39ltprojectnamegt39-but-type-39lttypenamegt39-was-not-found-in-project-39ltprojectnamegt39"></a>&#39;です。&lt;elementname&gt;&#39; 参照の種類 &#39;&lt;typename&gt;&#39; プロジェクト &#39;&lt;projectname&gt;&#39;以外の場合が、型 &#39;&lt;typename&gt;&#39; プロジェクト &#39; に見つかりませんでした&lt;projectname&gt;&#39;です。
 式は別のプロジェクトで参照されるクラス、構造体、モジュール、またはインターフェイスにアクセスしますが、そのプロジェクトに指定された型が含まれていません。  
   
  このエラーは、プロジェクトが同じソリューション内の別のプロジェクトへの間接参照を作成するときに発生します。 通常、プロジェクトは他のプロジェクトへの参照を作成するアセンブリへの参照を作成します。 アセンブリが他のプロジェクトの指定された型にアクセスする場合、その型への間接参照が確立されます。 しかし、他のプロジェクトに指定された型が存在しない場合は、このエラーが生成されます。  
@@ -49,7 +32,7 @@ ms.lasthandoff: 03/13/2017
 -   当該の型がどこかに定義されている場合は、それを定義するプロジェクトまたはアセンブリへの直接参照を作成します。  
   
 ## <a name="see-also"></a>関連項目  
- [NIB: 名前空間およびコンポーネントの参照](http://msdn.microsoft.com/en-us/568fa759-796b-44cd-bf5e-1cf8de6e38fd)   
- [プロジェクトの参照を管理します。](https://docs.microsoft.com/visualstudio/ide/managing-references-in-a-project)   
- [NIB: 参照の管理](http://msdn.microsoft.com/en-us/910912ce-0dc9-4569-9274-32c44a20cb2c)   
+ [NIB: 名前空間およびコンポーネントの参照](http://msdn.microsoft.com/en-us/568fa759-796b-44cd-bf5e-1cf8de6e38fd)  
+ [プロジェクト内の参照の管理](/visualstudio/ide/managing-references-in-a-project)  
+ [NIB: 参照の管理](http://msdn.microsoft.com/en-us/910912ce-0dc9-4569-9274-32c44a20cb2c)  
  [NIB 方法: [参照の追加] ダイアログ ボックスを使用して参照を追加または削除する](http://msdn.microsoft.com/en-us/3bd75d61-f00c-47c0-86a2-dd1f20e231c9)
