--- a/docs/visual-basic/misc/bc31128.md
+++ b/docs/visual-basic/misc/bc31128.md
@@ -1,30 +1,32 @@
 ---
-title: "&#39;RemoveHandler&#39; は既に宣言されています | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-visual-basic"
-ms.topic: "article"
-f1_keywords: 
-  - "vbc31128"
-  - "bc31128"
-helpviewer_keywords: 
-  - "BC31128"
+title: "&#39;です。RemoveHandler &#39;既に宣言されています"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-visual-basic
+ms.topic: article
+f1_keywords:
+- vbc31128
+- bc31128
+helpviewer_keywords: BC31128
 ms.assetid: bf290050-cd9c-4ca4-a356-e6fe3bfd68ba
-caps.latest.revision: 6
-author: "stevehoag"
-ms.author: "shoag"
-caps.handback.revision: 6
+caps.latest.revision: "6"
+author: dotnet-bot
+ms.author: dotnetcontent
+ms.openlocfilehash: 834f825eee171c9451f49807cf78441934ef5687
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# &#39;RemoveHandler&#39; は既に宣言されています
-カスタム イベントの宣言に 2 つ以上 `RemoveHandler` の宣言があります。`RemoveHandler` の宣言では、イベント ハンドラーを削除するために使用するプロシージャを宣言します。  
+# <a name="39removehandler39-is-already-declared"></a>&#39;です。RemoveHandler &#39;既に宣言されています
+カスタム イベントの宣言に 2 つ以上 `RemoveHandler` の宣言があります。 `RemoveHandler` の宣言では、イベント ハンドラーを削除するために使用するプロシージャを宣言します。  
   
  **エラー ID:** BC31128  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a>このエラーを解決するには  
   
 -   不要な `RemoveHandler` ステートメントを削除します。  
   
-## 参照  
- [RemoveHandler Statement](../../visual-basic/language-reference/statements/removehandler-statement.md)   
- [Event Statement](../../visual-basic/language-reference/statements/event-statement.md)
+## <a name="see-also"></a>関連項目  
+ [RemoveHandler ステートメント](../../visual-basic/language-reference/statements/removehandler-statement.md)  
+ [Event ステートメント](../../visual-basic/language-reference/statements/event-statement.md)
