--- a/docs/visual-basic/misc/bc31152.md
+++ b/docs/visual-basic/misc/bc31152.md
@@ -1,30 +1,32 @@
 ---
-title: "XML 名前空間プレフィックス &#39;prefix&#39; は XML が使用するために予約されているので、名前空間 URI は変更できません | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-visual-basic"
-ms.topic: "article"
-f1_keywords: 
-  - "vbc31152"
-  - "bc31152"
-helpviewer_keywords: 
-  - "BC31152"
+title: "XML 名前空間プレフィックス &#39; プレフィックス &#39;XML と、名前空間 URI を変更できませんで使用するために予約されています"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-visual-basic
+ms.topic: article
+f1_keywords:
+- vbc31152
+- bc31152
+helpviewer_keywords: BC31152
 ms.assetid: c2fd26c8-56d5-4bc0-86d1-230cf165d8c0
-caps.latest.revision: 4
-author: "stevehoag"
-ms.author: "shoag"
-caps.handback.revision: 4
+caps.latest.revision: "4"
+author: dotnet-bot
+ms.author: dotnetcontent
+ms.openlocfilehash: 9648af0f247f0dc5867276e04d8b40959603049a
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# XML 名前空間プレフィックス &#39;prefix&#39; は XML が使用するために予約されているので、名前空間 URI は変更できません
-`xmlns` などの予約済み XML 名前空間プレフィックスが XML リテラルで使用されています。  
+# <a name="xml-namespace-prefix-39prefix39-is-reserved-for-use-by-xml-and-the-namespace-uri-cannot-be-changed"></a>XML 名前空間プレフィックス &#39; プレフィックス &#39;XML と、名前空間 URI を変更できませんで使用するために予約されています
+`xmlns`などの予約済み XML 名前空間プレフィックスが XML リテラルで使用されています。  
   
  **エラー ID:** BC31152  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a>このエラーを解決するには  
   
 -   XML 名前空間プレフィックスを予約されていない値に変更します。  
   
-## 参照  
- [XML Literals](../../visual-basic/language-reference/xml-literals/index.md)   
+## <a name="see-also"></a>関連項目  
+ [XML リテラル](../../visual-basic/language-reference/xml-literals/index.md)  
  [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
