--- a/docs/visual-basic/misc/bc32034.md
+++ b/docs/visual-basic/misc/bc32034.md
@@ -1,30 +1,32 @@
 ---
-title: "&#39;End Set&#39; は、行の最初のステートメントでなければなりません | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-visual-basic"
-ms.topic: "article"
-f1_keywords: 
-  - "vbc32034"
-  - "bc32034"
-helpviewer_keywords: 
-  - "BC32034"
+title: "&#39;です。終了セット &#39;行の最初のステートメントをする必要があります。"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-visual-basic
+ms.topic: article
+f1_keywords:
+- vbc32034
+- bc32034
+helpviewer_keywords: BC32034
 ms.assetid: 93dc44f9-92a7-4114-b1fd-d0ba36c79556
-caps.latest.revision: 8
-author: "stevehoag"
-ms.author: "shoag"
-caps.handback.revision: 8
+caps.latest.revision: "8"
+author: dotnet-bot
+ms.author: dotnetcontent
+ms.openlocfilehash: e04b25bc23e8630a12119377341b1fb5500dee22
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# &#39;End Set&#39; は、行の最初のステートメントでなければなりません
-`End Set` ステートメントがコロン \(:\) ステートメント区切り文字の後に続いています。`End Set` はそのソース コード行でただ 1 つのステートメントである必要があります。  
+# <a name="39end-set39-must-be-the-first-statement-on-a-line"></a>&#39;です。終了セット &#39;行の最初のステートメントをする必要があります。
+`End Set` ステートメントがコロン (:) ステートメント区切り文字の後に続いています。 `End Set` はそのソース コード行でただ 1 つのステートメントである必要があります。  
   
  **エラー ID:** BC32034  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a>このエラーを解決するには  
   
 -   複数のステートメントを別々の行に分けます。  
   
-## 参照  
- [方法 : コード内でステートメントを分割および連結する](../../visual-basic/programming-guide/program-structure/how-to-break-and-combine-statements-in-code.md)   
- [Set Statement](../../visual-basic/language-reference/statements/set-statement.md)
+## <a name="see-also"></a>関連項目  
+ [方法 : コード内でステートメントを分割および連結する](../../visual-basic/programming-guide/program-structure/how-to-break-and-combine-statements-in-code.md)  
+ [Set ステートメント](../../visual-basic/language-reference/statements/set-statement.md)
