--- a/docs/visual-basic/misc/bc32106.md
+++ b/docs/visual-basic/misc/bc32106.md
@@ -1,39 +1,41 @@
 ---
-title: "型引数 &#39;&lt;typeargumentname&gt;&#39; は型パラメーター &#39;&lt;typeparametername&gt;&#39; の &#39;Class&#39; 制約を満たしていません | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-visual-basic"
-ms.topic: "article"
-f1_keywords: 
-  - "vbc32106"
-  - "bc32106"
-helpviewer_keywords: 
-  - "BC32106"
+title: "型の引数 &#39;&lt;typeargumentname&gt;&#39; を満たさない、&#39;です。クラス &#39;型パラメーター &#39; の制約&lt;typeparametername&gt;&#39;です。"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-visual-basic
+ms.topic: article
+f1_keywords:
+- vbc32106
+- bc32106
+helpviewer_keywords: BC32106
 ms.assetid: 1bac1dd6-f86b-4e98-ba2d-57d1936e3658
-caps.latest.revision: 8
-author: "stevehoag"
-ms.author: "shoag"
-caps.handback.revision: 8
+caps.latest.revision: "8"
+author: dotnet-bot
+ms.author: dotnetcontent
+ms.openlocfilehash: d0f462b4de8cf8c6433de724cb83dc0174ea8426
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# 型引数 &#39;&lt;typeargumentname&gt;&#39; は型パラメーター &#39;&lt;typeparametername&gt;&#39; の &#39;Class&#39; 制約を満たしていません
+# <a name="type-argument-39lttypeargumentnamegt39-does-not-satisfy-the-39class39-constraint-for-type-parameter-39lttypeparameternamegt39"></a>型の引数 &#39;&lt;typeargumentname&gt;&#39; を満たさない、&#39;です。クラス &#39;型パラメーター &#39; の制約&lt;typeparametername&gt;&#39;です。
 ジェネリック型に指定された型引数は、対応する型パラメーターの参照型の制約を満たしていません。  
   
  制約リストでは、型パラメーターに渡される型引数の要件が適用されます。 制約リストに特定のクラスまたはインターフェイスを何も含めない場合は、次のいずれかを指定することによって一般的な要件を設定できます。  
   
--   型引数は値型 \([構造体 \(Visual Basic\)](http://msdn.microsoft.com/ja-jp/263ce115-ac36-4c05-8cb7-0e0eead5c6d0) 制約を含む\) にする必要があります  
+-   型引数は値型 ( [構造体 (Visual Basic)](http://msdn.microsoft.com/en-us/263ce115-ac36-4c05-8cb7-0e0eead5c6d0) 制約を含む) にする必要があります  
   
--   型引数は参照型 \([クラス \(Visual Basic\)](http://msdn.microsoft.com/ja-jp/0777c6e6-46bc-451b-ad70-57b49d4ef4f7) 制約を含む\) にする必要があります  
+-   型引数は参照型 ( [クラス (Visual Basic)](http://msdn.microsoft.com/en-us/0777c6e6-46bc-451b-ad70-57b49d4ef4f7) 制約を含む) にする必要があります  
   
  同じ型パラメーターに `Structure` と `Class` の両方を指定することはできません。また、どちらも複数回指定することはできません。  
   
  **エラー ID:** BC32106  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a>このエラーを解決するには  
   
 -   任意の参照型の型引数を選択します。  
   
-## 参照  
- [Visual Basic におけるジェネリック型](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)   
- [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)   
+## <a name="see-also"></a>関連項目  
+ [Visual Basic におけるジェネリック型](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+ [値型と参照型](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)  
  [方法 : ジェネリック クラスを使用する](../../visual-basic/programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
