--- a/docs/visual-basic/misc/bc33012.md
+++ b/docs/visual-basic/misc/bc33012.md
@@ -1,34 +1,36 @@
 ---
-title: "演算子は &#39;Shared&#39; として宣言される必要があります | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-visual-basic"
-ms.topic: "article"
-f1_keywords: 
-  - "vbc33012"
-  - "bc33012"
-helpviewer_keywords: 
-  - "BC33012"
+title: "演算子を宣言する必要があります (& a) #39 です。共有 &#39;です。"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-visual-basic
+ms.topic: article
+f1_keywords:
+- vbc33012
+- bc33012
+helpviewer_keywords: BC33012
 ms.assetid: 5ad97616-4032-46cd-aaf7-517db5d1195f
-caps.latest.revision: 9
-author: "stevehoag"
-ms.author: "shoag"
-caps.handback.revision: 9
+caps.latest.revision: "9"
+author: dotnet-bot
+ms.author: dotnetcontent
+ms.openlocfilehash: 620a10a92f0c0d6b9d4fc2e2037824fbd369736e
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# 演算子は &#39;Shared&#39; として宣言される必要があります
-[Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) には [Shared](../../visual-basic/language-reference/modifiers/shared.md) キーワードが含まれていません。  
+# <a name="operators-must-be-declared-39shared39"></a>演算子を宣言する必要があります (& a) #39 です。共有 &#39;です。
+[Operator ステートメント](../../visual-basic/language-reference/statements/operator-statement.md)を含まない、 [Shared](../../visual-basic/language-reference/modifiers/shared.md)キーワード。  
   
- `Operator` プロシージャには、[Public](../../visual-basic/language-reference/modifiers/public.md) と `Shared` の両方のキーワードが必要であり、変換演算子にも [Widening](../../visual-basic/language-reference/modifiers/widening.md) または [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md) のいずれかのキーワードが必要です。  
+ `Operator`プロシージャでは、両方が必要です、[パブリック](../../visual-basic/language-reference/modifiers/public.md)と`Shared`キーワード、および変換演算子も必要とするか、 [Widening](../../visual-basic/language-reference/modifiers/widening.md)または[Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md)キーワード。  
   
  **エラー ID:** BC33012  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a>このエラーを解決するには  
   
 -   `Shared` キーワードを `Operator` ステートメントに追加します。  
   
-## 参照  
- [Operator Procedures](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)   
- [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md)   
- [How to: Define an Operator](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)   
- [How to: Define a Conversion Operator](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+## <a name="see-also"></a>関連項目  
+ [演算子プロシージャ](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
+ [Operator ステートメント](../../visual-basic/language-reference/statements/operator-statement.md)  
+ [方法 : 演算子を定義する](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
+ [方法 : 変換演算子を定義する](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
