--- a/docs/visual-basic/misc/bc36662.md
+++ b/docs/visual-basic/misc/bc36662.md
@@ -1,42 +1,25 @@
 ---
-title: "Option Strict On により、ラムダ式とデリゲートの間の暗黙の型変換で縮小 &quot;&lt;delegatename&gt;&quot; |Microsoft ドキュメント"
-ms.date: 2015-07-20
+title: "Option strict On ではないを許可する、ラムダ式とデリゲート &#39; 間の暗黙的な型変換で縮小変換&lt;delegatename&gt;&#39;です。"
+ms.date: 07/20/2015
 ms.prod: .net
-ms.technology:
-- devlang-visual-basic
+ms.technology: devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - bc36662
 - vbc36662
-helpviewer_keywords:
-- BC36662
+helpviewer_keywords: BC36662
 ms.assetid: 4504497b-56ba-4631-ad7b-59975f7fee04
-caps.latest.revision: 4
+caps.latest.revision: "4"
 author: dotnet-bot
 ms.author: dotnetcontent
-translation.priority.ht:
-- de-de
-- es-es
-- fr-fr
-- it-it
-- ja-jp
-- ko-kr
-- ru-ru
-- zh-cn
-- zh-tw
-translation.priority.mt:
-- cs-cz
-- pl-pl
-- pt-br
-- tr-tr
-translationtype: Machine Translation
-ms.sourcegitcommit: a06bd2a17f1d6c7308fa6337c866c1ca2e7281c0
-ms.openlocfilehash: 0c5faf2280f64cfb41204e0928bba4997e00a8ee
-ms.lasthandoff: 03/13/2017
-
+ms.openlocfilehash: 7fb7b8daf669cec237c361a0cf33c8d55a902b9a
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-the-lambda-expression-and-delegate-39ltdelegatenamegt39"></a>Option Strict On により、ラムダ式とデリゲートの間の暗黙の型変換で縮小 '&lt;delegatename&gt;'
-`Option Strict` がオンの場合、デリゲート内のパラメーターのデータ型と、そのデリゲート型の変数に割り当てられているラムダ式の対応するパラメーターの間で縮小変換を行うことはできません。 たとえば、次のコードでは、デリゲート `Del` に型 `Integer`の&1; つのパラメーターがあります。  
+# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-the-lambda-expression-and-delegate-39ltdelegatenamegt39"></a>Option strict On ではないを許可する、ラムダ式とデリゲート &#39; 間の暗黙的な型変換で縮小変換&lt;delegatename&gt;&#39;です。
+`Option Strict` がオンの場合、デリゲート内のパラメーターのデータ型と、そのデリゲート型の変数に割り当てられているラムダ式の対応するパラメーターの間で縮小変換を行うことはできません。 たとえば、次のコードでは、デリゲート `Del` に型 `Integer`の 1 つのパラメーターがあります。  
   
 ```vb  
 Delegate Function Del(ByVal p As Integer) As String  
@@ -66,7 +49,7 @@ Dim example4 As Del = Function(n) "Valid"
 ```  
   
 ## <a name="see-also"></a>関連項目  
- [ラムダ式](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)   
- [デリゲート](../../visual-basic/programming-guide/language-features/delegates/index.md)   
- [拡大変換と縮小変換](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)   
+ [ラムダ式](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)  
+ [デリゲート](../../visual-basic/programming-guide/language-features/delegates/index.md)  
+ [拡大変換と縮小変換](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)  
  [厳密でないデリゲート変換](../../visual-basic/programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
