Commit bilingual files

--- a/docs/visual-basic/misc/bc30960.md
+++ b/docs/visual-basic/misc/bc30960.md
@@ -1,55 +1,38 @@
 ---
-title: "&quot;&lt;elementname&gt;&quot;を入力する参照&quot;&lt;typename&gt;&quot;project&quot; の&lt;projectname&gt;&quot;、型が、&quot;&lt;typename&gt;&quot;に見つからなかったプロジェクト&quot;&lt;projectname&gt;&quot; |Microsoft ドキュメント"
-ms.date: 2015-07-20
+title: "&#39;です。&lt;elementname&gt;&#39; 参照の種類 &#39;&lt;typename&gt;&#39; プロジェクト &#39;&lt;projectname&gt;&#39;以外の場合が、型 &#39;&lt;typename&gt;&#39; プロジェクト &#39; に見つかりませんでした&lt;projectname&gt;&#39;です。"
+ms.date: 07/20/2015
 ms.prod: .net
-ms.technology:
-- devlang-visual-basic
+ms.technology: devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - vbc30960
 - bc30960
-helpviewer_keywords:
-- BC30960
+helpviewer_keywords: BC30960
 ms.assetid: 4ed4bff5-c670-46f6-8360-7287444d50e5
-caps.latest.revision: 6
+caps.latest.revision: "6"
 author: dotnet-bot
 ms.author: dotnetcontent
-translation.priority.ht:
-- de-de
-- es-es
-- fr-fr
-- it-it
-- ja-jp
-- ko-kr
-- ru-ru
-- zh-cn
-- zh-tw
-translation.priority.mt:
-- cs-cz
-- pl-pl
-- pt-br
-- tr-tr
-translationtype: Machine Translation
-ms.sourcegitcommit: a06bd2a17f1d6c7308fa6337c866c1ca2e7281c0
-ms.openlocfilehash: c4ab50e8ada19e5d9ea4b1e869875d3df682cf65
-ms.lasthandoff: 03/13/2017
-
+ms.openlocfilehash: 3fdac14b46ab45b776f3a21ec4bc8b833e4d8cc0
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# <a name="39ltelementnamegt39-refers-to-type-39lttypenamegt39-in-project-39ltprojectnamegt39-but-type-39lttypenamegt39-was-not-found-in-project-39ltprojectnamegt39"></a>'&lt;elementname&gt;'を入力する参照'&lt;typename&gt;'project' の&lt;projectname&gt;'、型が、'&lt;typename&gt;'に見つからなかったプロジェクト'&lt;projectname&gt;'
-式は別のプロジェクトで参照されるクラス、構造体、モジュール、またはインターフェイスにアクセスしますが、そのプロジェクトに指定された型が含まれていません。  
+# <a name="39ltelementnamegt39-refers-to-type-39lttypenamegt39-in-project-39ltprojectnamegt39-but-type-39lttypenamegt39-was-not-found-in-project-39ltprojectnamegt39"></a><span data-ttu-id="28238-102">&#39;です。&lt;elementname&gt;&#39; 参照の種類 &#39;&lt;typename&gt;&#39; プロジェクト &#39;&lt;projectname&gt;&#39;以外の場合が、型 &#39;&lt;typename&gt;&#39; プロジェクト &#39; に見つかりませんでした&lt;projectname&gt;&#39;です。</span><span class="sxs-lookup"><span data-stu-id="28238-102">&#39;&lt;elementname&gt;&#39; refers to type &#39;&lt;typename&gt;&#39; in project &#39;&lt;projectname&gt;&#39;, but type &#39;&lt;typename&gt;&#39; was not found in project &#39;&lt;projectname&gt;&#39;</span></span>
+<span data-ttu-id="28238-103">式は別のプロジェクトで参照されるクラス、構造体、モジュール、またはインターフェイスにアクセスしますが、そのプロジェクトに指定された型が含まれていません。</span><span class="sxs-lookup"><span data-stu-id="28238-103">An expression accesses a class, structure, module, or interface referred to in another project, but that project does not contain the specified type.</span></span>  
   
- このエラーは、プロジェクトが同じソリューション内の別のプロジェクトへの間接参照を作成するときに発生します。 通常、プロジェクトは他のプロジェクトへの参照を作成するアセンブリへの参照を作成します。 アセンブリが他のプロジェクトの指定された型にアクセスする場合、その型への間接参照が確立されます。 しかし、他のプロジェクトに指定された型が存在しない場合は、このエラーが生成されます。  
+ <span data-ttu-id="28238-104">このエラーは、プロジェクトが同じソリューション内の別のプロジェクトへの間接参照を作成するときに発生します。</span><span class="sxs-lookup"><span data-stu-id="28238-104">This error occurs when your project makes an indirect reference to another project in the same solution.</span></span> <span data-ttu-id="28238-105">通常、プロジェクトは他のプロジェクトへの参照を作成するアセンブリへの参照を作成します。</span><span class="sxs-lookup"><span data-stu-id="28238-105">Typically, your project makes a reference to an assembly that makes a reference to the other project.</span></span> <span data-ttu-id="28238-106">アセンブリが他のプロジェクトの指定された型にアクセスする場合、その型への間接参照が確立されます。</span><span class="sxs-lookup"><span data-stu-id="28238-106">If the assembly accesses the specified type in the other project, the indirect reference to the type is established.</span></span> <span data-ttu-id="28238-107">しかし、他のプロジェクトに指定された型が存在しない場合は、このエラーが生成されます。</span><span class="sxs-lookup"><span data-stu-id="28238-107">However, if the type is not present in the other project, this error is generated.</span></span>  
   
- **エラー ID:** BC30960  
+ <span data-ttu-id="28238-108">**エラー ID:** BC30960</span><span class="sxs-lookup"><span data-stu-id="28238-108">**Error ID:** BC30960</span></span>  
   
-## <a name="to-correct-this-error"></a>このエラーを解決するには  
+## <a name="to-correct-this-error"></a><span data-ttu-id="28238-109">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="28238-109">To correct this error</span></span>  
   
--   当該の型がどこにも定義されなくなった場合は、その型にアクセスしようとするステートメントを削除するか、置き換えます。 また、当該の型への間接参照を提供するアセンブリでも、同じ変更が必要になる場合があります。  
+-   <span data-ttu-id="28238-110">当該の型がどこにも定義されなくなった場合は、その型にアクセスしようとするステートメントを削除するか、置き換えます。</span><span class="sxs-lookup"><span data-stu-id="28238-110">If the cited type is no longer defined anywhere, then remove or replace the statement that attempts to access it.</span></span> <span data-ttu-id="28238-111">また、当該の型への間接参照を提供するアセンブリでも、同じ変更が必要になる場合があります。</span><span class="sxs-lookup"><span data-stu-id="28238-111">You might also need to make the same change in the assembly that provides the indirect reference to the cited type.</span></span>  
   
--   当該の型がどこかに定義されている場合は、それを定義するプロジェクトまたはアセンブリへの直接参照を作成します。  
+-   <span data-ttu-id="28238-112">当該の型がどこかに定義されている場合は、それを定義するプロジェクトまたはアセンブリへの直接参照を作成します。</span><span class="sxs-lookup"><span data-stu-id="28238-112">If the cited type is defined somewhere, then make a direct reference to the project or assembly that defines it.</span></span>  
   
-## <a name="see-also"></a>関連項目  
- [NIB: 名前空間およびコンポーネントの参照](http://msdn.microsoft.com/en-us/568fa759-796b-44cd-bf5e-1cf8de6e38fd)   
- [プロジェクトの参照を管理します。](https://docs.microsoft.com/visualstudio/ide/managing-references-in-a-project)   
- [NIB: 参照の管理](http://msdn.microsoft.com/en-us/910912ce-0dc9-4569-9274-32c44a20cb2c)   
- [NIB 方法: [参照の追加] ダイアログ ボックスを使用して参照を追加または削除する](http://msdn.microsoft.com/en-us/3bd75d61-f00c-47c0-86a2-dd1f20e231c9)
+## <a name="see-also"></a><span data-ttu-id="28238-113">関連項目</span><span class="sxs-lookup"><span data-stu-id="28238-113">See Also</span></span>  
+ [<span data-ttu-id="28238-114">NIB: 名前空間およびコンポーネントの参照</span><span class="sxs-lookup"><span data-stu-id="28238-114">NIB: Referencing Namespaces and Components</span></span>](http://msdn.microsoft.com/en-us/568fa759-796b-44cd-bf5e-1cf8de6e38fd)  
+ [<span data-ttu-id="28238-115">プロジェクト内の参照の管理</span><span class="sxs-lookup"><span data-stu-id="28238-115">Managing references in a project</span></span>](/visualstudio/ide/managing-references-in-a-project)  
+ [<span data-ttu-id="28238-116">NIB: 参照の管理</span><span class="sxs-lookup"><span data-stu-id="28238-116">NIB: Managing References</span></span>](http://msdn.microsoft.com/en-us/910912ce-0dc9-4569-9274-32c44a20cb2c)  
+ <span data-ttu-id="28238-117">[NIB 方法: [参照の追加] ダイアログ ボックスを使用して参照を追加または削除する](http://msdn.microsoft.com/en-us/3bd75d61-f00c-47c0-86a2-dd1f20e231c9)</span><span class="sxs-lookup"><span data-stu-id="28238-117">[NIB How to: Add or Remove References By Using the Add Reference Dialog Box](http://msdn.microsoft.com/en-us/3bd75d61-f00c-47c0-86a2-dd1f20e231c9)</span></span>
