--- a/docs/visual-basic/misc/bc33038.md
+++ b/docs/visual-basic/misc/bc33038.md
@@ -1,52 +1,54 @@
 ---
-title: "型 &#39;&lt;typename&gt;&#39; を &#39;For&#39; ステートメントで使用するには、演算子 &#39;&lt;operator&gt;&#39; を定義しなければなりません | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-visual-basic"
-ms.topic: "article"
-f1_keywords: 
-  - "vbc33038"
-  - "BC33038"
-helpviewer_keywords: 
-  - "BC33038"
+title: "型 &#39;&lt;typename&gt;&#39; 演算子 &#39; を定義する必要があります&lt;演算子&gt;&#39; で使用する、&#39;です。&#39;です。ステートメント"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-visual-basic
+ms.topic: article
+f1_keywords:
+- vbc33038
+- BC33038
+helpviewer_keywords: BC33038
 ms.assetid: b1c9d87f-80f9-4c8c-8908-f8400b9fe4c5
-caps.latest.revision: 8
-author: "stevehoag"
-ms.author: "shoag"
-caps.handback.revision: 8
+caps.latest.revision: "8"
+author: dotnet-bot
+ms.author: dotnetcontent
+ms.openlocfilehash: 26303440d600f40cd1fd8ed8b9ece02364609f32
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# 型 &#39;&lt;typename&gt;&#39; を &#39;For&#39; ステートメントで使用するには、演算子 &#39;&lt;operator&gt;&#39; を定義しなければなりません
-`For` ループが、必要な演算子をサポートしていない型のカウンター変数を指定しています。  
+# <a name="type-39lttypenamegt39-must-define-operator-39ltoperatorgt39-to-be-used-in-a-39for39-statement"></a><span data-ttu-id="cd31b-102">型 &#39;&lt;typename&gt;&#39; 演算子 &#39; を定義する必要があります&lt;演算子&gt;&#39; で使用する、&#39;です。&#39;です。ステートメント</span><span class="sxs-lookup"><span data-stu-id="cd31b-102">Type &#39;&lt;typename&gt;&#39; must define operator &#39;&lt;operator&gt;&#39; to be used in a &#39;For&#39; statement</span></span>
+<span data-ttu-id="cd31b-103">`For` ループが、必要な演算子をサポートしていない型のカウンター変数を指定しています。</span><span class="sxs-lookup"><span data-stu-id="cd31b-103">A `For` loop specifies a counter variable of a type that does not support a required operator.</span></span>  
   
- `For` ループ内のカウンター変数は、次の演算子のすべてをサポートする任意のデータ型にすることができます。  
+ <span data-ttu-id="cd31b-104">`For` ループ内のカウンター変数は、次の演算子のすべてをサポートする任意のデータ型にすることができます。</span><span class="sxs-lookup"><span data-stu-id="cd31b-104">The counter variable in a `For` loop can be of any data type that supports all of the following operators:</span></span>  
   
--   以上 \(`>=`\)  
+-   <span data-ttu-id="cd31b-105">以上 (`>=`)</span><span class="sxs-lookup"><span data-stu-id="cd31b-105">Greater than or equal (`>=`)</span></span>  
   
--   以下 \(`<=`\)  
+-   <span data-ttu-id="cd31b-106">以下 (`<=`)</span><span class="sxs-lookup"><span data-stu-id="cd31b-106">Less than or equal (`<=`)</span></span>  
   
--   加算 \(`+`\)  
+-   <span data-ttu-id="cd31b-107">加算 (`+`)</span><span class="sxs-lookup"><span data-stu-id="cd31b-107">Addition (`+`)</span></span>  
   
--   減算 \(`-`\)  
+-   <span data-ttu-id="cd31b-108">減算 (`-`)</span><span class="sxs-lookup"><span data-stu-id="cd31b-108">Subtraction (`-`)</span></span>  
   
- カウンター変数に数値データ型を使用する場合、先行するすべての演算子がサポートされます。 ユーザー定義のクラスまたは構造体を使用する場合、そのクラスまたは構造体の先行するすべての演算子を定義する必要があります。  
+ <span data-ttu-id="cd31b-109">カウンター変数に数値データ型を使用する場合、先行するすべての演算子がサポートされます。</span><span class="sxs-lookup"><span data-stu-id="cd31b-109">If you use a numeric data type for the counter variable, all the preceding operators are supported.</span></span> <span data-ttu-id="cd31b-110">ユーザー定義のクラスまたは構造体を使用する場合、そのクラスまたは構造体の先行するすべての演算子を定義する必要があります。</span><span class="sxs-lookup"><span data-stu-id="cd31b-110">If you use a user-defined class or structure, you must define all the preceding operators on that class or structure.</span></span>  
   
- `For` ステートメント内の `start`、`end`、および `step` 式のデータ型はカウンター変数のデータ型に拡大変換する必要があることにも注意してください。 カウンター変数がユーザー定義のクラスまたは構造体で、`start`、`end`、または `step` 式が異なる型である場合、`CType` 変換演算子を定義して、必要な変換を実現する必要があります。  
+ <span data-ttu-id="cd31b-111">`start`ステートメント内の `end`、 `step` 、および `For` 式のデータ型はカウンター変数のデータ型に拡大変換する必要があることにも注意してください。</span><span class="sxs-lookup"><span data-stu-id="cd31b-111">Note also that the data types of the `start`, `end`, and `step` expressions in the `For` statement must widen to the data type of the counter variable.</span></span> <span data-ttu-id="cd31b-112">カウンター変数がユーザー定義のクラスまたは構造体で、 `start`、 `end`、または `step` 式が異なる型である場合、 `CType` 変換演算子を定義して、必要な変換を実現する必要があります。</span><span class="sxs-lookup"><span data-stu-id="cd31b-112">If the counter variable is a user-defined class or structure and the `start`, `end`, or `step` expression is of a different type, you must define the `CType` conversion operator to accomplish the necessary conversion.</span></span>  
   
- **エラー ID:** BC33038  
+ <span data-ttu-id="cd31b-113">**エラー ID:** BC33038</span><span class="sxs-lookup"><span data-stu-id="cd31b-113">**Error ID:** BC33038</span></span>  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a><span data-ttu-id="cd31b-114">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="cd31b-114">To correct this error</span></span>  
   
-1.  カウンター変数のデータ型のスペルが正しいことを確認します。  
+1.  <span data-ttu-id="cd31b-115">カウンター変数のデータ型のスペルが正しいことを確認します。</span><span class="sxs-lookup"><span data-stu-id="cd31b-115">Make sure the spelling of the counter-variable data type is correct.</span></span>  
   
-2.  ユーザー定義のクラスまたは構造体をカウンター変数に使用する場合は、そのクラスまたは構造体に必要なすべての演算子を定義します。  
+2.  <span data-ttu-id="cd31b-116">ユーザー定義のクラスまたは構造体をカウンター変数に使用する場合は、そのクラスまたは構造体に必要なすべての演算子を定義します。</span><span class="sxs-lookup"><span data-stu-id="cd31b-116">If you are using a user-defined class or structure for the counter variable, define all the required operators on that class or structure.</span></span>  
   
-3.  `start`、`end`、および `step` 式のデータ型によっては、それらをカウンター変数のデータ型に変換するための 1 つ以上の `CType` 変換演算子を定義する必要がある場合があります。  
+3.  <span data-ttu-id="cd31b-117">`start`、 `end`、および `step` 式のデータ型によっては、それらをカウンター変数のデータ型に変換するための 1 つ以上の `CType` 変換演算子を定義する必要がある場合があります。</span><span class="sxs-lookup"><span data-stu-id="cd31b-117">Depending on the data types of the `start`, `end`, and `step` expressions, you might have to define one or more `CType` conversion operators to convert them to the counter variable data type.</span></span>  
   
-## 参照  
- [For...Next ステートメント](../../visual-basic/language-reference/statements/for-next-statement.md)   
- [Operator Procedures](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)   
- [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md)   
- [How to: Define an Operator](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)   
- [How to: Define a Conversion Operator](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)   
- [CType 関数](../../visual-basic/language-reference/functions/ctype-function.md)
+## <a name="see-also"></a><span data-ttu-id="cd31b-118">関連項目</span><span class="sxs-lookup"><span data-stu-id="cd31b-118">See Also</span></span>  
+ [<span data-ttu-id="cd31b-119">For...Next ステートメント</span><span class="sxs-lookup"><span data-stu-id="cd31b-119">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)  
+ [<span data-ttu-id="cd31b-120">演算子プロシージャ</span><span class="sxs-lookup"><span data-stu-id="cd31b-120">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
+ [<span data-ttu-id="cd31b-121">Operator ステートメント</span><span class="sxs-lookup"><span data-stu-id="cd31b-121">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)  
+ [<span data-ttu-id="cd31b-122">方法 : 演算子を定義する</span><span class="sxs-lookup"><span data-stu-id="cd31b-122">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
+ [<span data-ttu-id="cd31b-123">方法 : 変換演算子を定義する</span><span class="sxs-lookup"><span data-stu-id="cd31b-123">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)  
+ [<span data-ttu-id="cd31b-124">CType 関数</span><span class="sxs-lookup"><span data-stu-id="cd31b-124">CType Function</span></span>](../../visual-basic/language-reference/functions/ctype-function.md)
