--- a/docs/visual-basic/misc/bc30305.md
+++ b/docs/visual-basic/misc/bc30305.md
@@ -1,30 +1,32 @@
 ---
-title: "&#39;&lt;method1&gt;&#39; および &#39;&lt;method2&gt;&#39; は、省略可能なパラメーターの既定値しか異ならないため、互いをオーバーロードすることはできません | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-visual-basic"
-ms.topic: "article"
-f1_keywords: 
-  - "vbc30305"
-  - "bc30305"
-helpviewer_keywords: 
-  - "BC30305"
+title: "&#39;です。&lt;method1&gt;&#39; と &#39;&lt;method2&gt;&#39; 省略可能なパラメーターの既定値のみが異なるために、お互いをオーバー ロードすることはできません"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-visual-basic
+ms.topic: article
+f1_keywords:
+- vbc30305
+- bc30305
+helpviewer_keywords: BC30305
 ms.assetid: f07f925e-9f95-4885-bdba-eaba2d0483d8
-caps.latest.revision: 8
-author: "stevehoag"
-ms.author: "shoag"
-caps.handback.revision: 8
+caps.latest.revision: "8"
+author: dotnet-bot
+ms.author: dotnetcontent
+ms.openlocfilehash: b48b1407c89365c9f80d9b77c6723ecb6303320a
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# &#39;&lt;method1&gt;&#39; および &#39;&lt;method2&gt;&#39; は、省略可能なパラメーターの既定値しか異ならないため、互いをオーバーロードすることはできません
-オーバーロードしようとしたメソッドは、省略可能なパラメータしか異なっていません。 省略可能なパラメーターを持つメソッドは、省略可能なパラメーターを持つバージョンと持たないバージョンの 2 つのオーバーロードされたメソッドと同じです。 このため、いずれかのバージョンの引数リストと一致する引数リストを使ってメソッドをオーバーロードすることはできません。  
+# <a name="39ltmethod1gt39-and-39ltmethod2gt39-cannot-overload-each-other-because-they-differ-only-by-the-default-values-of-optional-parameters"></a><span data-ttu-id="fff9d-102">&#39;です。&lt;method1&gt;&#39; と &#39;&lt;method2&gt;&#39; 省略可能なパラメーターの既定値のみが異なるために、お互いをオーバー ロードすることはできません</span><span class="sxs-lookup"><span data-stu-id="fff9d-102">&#39;&lt;method1&gt;&#39; and &#39;&lt;method2&gt;&#39; cannot overload each other because they differ only by the default values of optional parameters</span></span>
+<span data-ttu-id="fff9d-103">オーバーロードしようとしたメソッドは、省略可能なパラメータしか異なっていません。</span><span class="sxs-lookup"><span data-stu-id="fff9d-103">You have attempted to overload a method with another method that differs from the first only in its optional parameters.</span></span> <span data-ttu-id="fff9d-104">省略可能なパラメーターを持つメソッドは、省略可能なパラメーターを持つバージョンと持たないバージョンの 2 つのオーバーロードされたメソッドと同じです。</span><span class="sxs-lookup"><span data-stu-id="fff9d-104">A method with an optional parameter is equivalent to two overloaded methods, one with the optional parameter, and the other without it.</span></span> <span data-ttu-id="fff9d-105">このため、いずれかのバージョンの引数リストと一致する引数リストを使ってメソッドをオーバーロードすることはできません。</span><span class="sxs-lookup"><span data-stu-id="fff9d-105">Therefore, you cannot overload a method with an argument list corresponding to either of these.</span></span>  
   
- **エラー ID:** BC30305  
+ <span data-ttu-id="fff9d-106">**エラー ID:** BC30305</span><span class="sxs-lookup"><span data-stu-id="fff9d-106">**Error ID:** BC30305</span></span>  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fff9d-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="fff9d-107">To correct this error</span></span>  
   
--   省略可能なパラメーター以外の部分が異なっているメソッドでオーバーロードします。  
+-   <span data-ttu-id="fff9d-108">省略可能なパラメーター以外の部分が異なっているメソッドでオーバーロードします。</span><span class="sxs-lookup"><span data-stu-id="fff9d-108">Ensure that the methods are differentiated by more than only optional parameters.</span></span>  
   
-## 参照  
- [Procedure Overloading](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)   
- [Considerations in Overloading Procedures](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
+## <a name="see-also"></a><span data-ttu-id="fff9d-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="fff9d-109">See Also</span></span>  
+ [<span data-ttu-id="fff9d-110">プロシージャのオーバーロード</span><span class="sxs-lookup"><span data-stu-id="fff9d-110">Procedure Overloading</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)  
+ [<span data-ttu-id="fff9d-111">プロシージャのオーバーロードに関する注意事項</span><span class="sxs-lookup"><span data-stu-id="fff9d-111">Considerations in Overloading Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
