--- a/docs/visual-basic/misc/bc31128.md
+++ b/docs/visual-basic/misc/bc31128.md
@@ -1,30 +1,32 @@
 ---
-title: "&#39;RemoveHandler&#39; は既に宣言されています | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-visual-basic"
-ms.topic: "article"
-f1_keywords: 
-  - "vbc31128"
-  - "bc31128"
-helpviewer_keywords: 
-  - "BC31128"
+title: "&#39;です。RemoveHandler &#39;既に宣言されています"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-visual-basic
+ms.topic: article
+f1_keywords:
+- vbc31128
+- bc31128
+helpviewer_keywords: BC31128
 ms.assetid: bf290050-cd9c-4ca4-a356-e6fe3bfd68ba
-caps.latest.revision: 6
-author: "stevehoag"
-ms.author: "shoag"
-caps.handback.revision: 6
+caps.latest.revision: "6"
+author: dotnet-bot
+ms.author: dotnetcontent
+ms.openlocfilehash: 834f825eee171c9451f49807cf78441934ef5687
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# &#39;RemoveHandler&#39; は既に宣言されています
-カスタム イベントの宣言に 2 つ以上 `RemoveHandler` の宣言があります。`RemoveHandler` の宣言では、イベント ハンドラーを削除するために使用するプロシージャを宣言します。  
+# <a name="39removehandler39-is-already-declared"></a><span data-ttu-id="ba9d9-102">&#39;です。RemoveHandler &#39;既に宣言されています</span><span class="sxs-lookup"><span data-stu-id="ba9d9-102">&#39;RemoveHandler&#39; is already declared</span></span>
+<span data-ttu-id="ba9d9-103">カスタム イベントの宣言に 2 つ以上 `RemoveHandler` の宣言があります。</span><span class="sxs-lookup"><span data-stu-id="ba9d9-103">More than one `RemoveHandler` declaration appeared in a custom event declaration.</span></span> <span data-ttu-id="ba9d9-104">`RemoveHandler` の宣言では、イベント ハンドラーを削除するために使用するプロシージャを宣言します。</span><span class="sxs-lookup"><span data-stu-id="ba9d9-104">An `RemoveHandler` declaration declares procedure used to remove an event handler.</span></span>  
   
- **エラー ID:** BC31128  
+ <span data-ttu-id="ba9d9-105">**エラー ID:** BC31128</span><span class="sxs-lookup"><span data-stu-id="ba9d9-105">**Error ID:** BC31128</span></span>  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ba9d9-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="ba9d9-106">To correct this error</span></span>  
   
--   不要な `RemoveHandler` ステートメントを削除します。  
+-   <span data-ttu-id="ba9d9-107">不要な `RemoveHandler` ステートメントを削除します。</span><span class="sxs-lookup"><span data-stu-id="ba9d9-107">Remove the redundant `RemoveHandler` statement.</span></span>  
   
-## 参照  
- [RemoveHandler Statement](../../visual-basic/language-reference/statements/removehandler-statement.md)   
- [Event Statement](../../visual-basic/language-reference/statements/event-statement.md)
+## <a name="see-also"></a><span data-ttu-id="ba9d9-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="ba9d9-108">See Also</span></span>  
+ [<span data-ttu-id="ba9d9-109">RemoveHandler ステートメント</span><span class="sxs-lookup"><span data-stu-id="ba9d9-109">RemoveHandler Statement</span></span>](../../visual-basic/language-reference/statements/removehandler-statement.md)  
+ [<span data-ttu-id="ba9d9-110">Event ステートメント</span><span class="sxs-lookup"><span data-stu-id="ba9d9-110">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
