--- a/docs/visual-basic/misc/bc31152.md
+++ b/docs/visual-basic/misc/bc31152.md
@@ -1,30 +1,32 @@
 ---
-title: "XML 名前空間プレフィックス &#39;prefix&#39; は XML が使用するために予約されているので、名前空間 URI は変更できません | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-visual-basic"
-ms.topic: "article"
-f1_keywords: 
-  - "vbc31152"
-  - "bc31152"
-helpviewer_keywords: 
-  - "BC31152"
+title: "XML 名前空間プレフィックス &#39; プレフィックス &#39;XML と、名前空間 URI を変更できませんで使用するために予約されています"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-visual-basic
+ms.topic: article
+f1_keywords:
+- vbc31152
+- bc31152
+helpviewer_keywords: BC31152
 ms.assetid: c2fd26c8-56d5-4bc0-86d1-230cf165d8c0
-caps.latest.revision: 4
-author: "stevehoag"
-ms.author: "shoag"
-caps.handback.revision: 4
+caps.latest.revision: "4"
+author: dotnet-bot
+ms.author: dotnetcontent
+ms.openlocfilehash: 9648af0f247f0dc5867276e04d8b40959603049a
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# XML 名前空間プレフィックス &#39;prefix&#39; は XML が使用するために予約されているので、名前空間 URI は変更できません
-`xmlns` などの予約済み XML 名前空間プレフィックスが XML リテラルで使用されています。  
+# <a name="xml-namespace-prefix-39prefix39-is-reserved-for-use-by-xml-and-the-namespace-uri-cannot-be-changed"></a><span data-ttu-id="aeb63-102">XML 名前空間プレフィックス &#39; プレフィックス &#39;XML と、名前空間 URI を変更できませんで使用するために予約されています</span><span class="sxs-lookup"><span data-stu-id="aeb63-102">XML namespace prefix &#39;prefix&#39; is reserved for use by XML and the namespace URI cannot be changed</span></span>
+<span data-ttu-id="aeb63-103">`xmlns`などの予約済み XML 名前空間プレフィックスが XML リテラルで使用されています。</span><span class="sxs-lookup"><span data-stu-id="aeb63-103">A reserved XML namespace prefix, such as `xmlns`, has been used in an XML literal.</span></span>  
   
- **エラー ID:** BC31152  
+ <span data-ttu-id="aeb63-104">**エラー ID:** BC31152</span><span class="sxs-lookup"><span data-stu-id="aeb63-104">**Error ID:** BC31152</span></span>  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a><span data-ttu-id="aeb63-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="aeb63-105">To correct this error</span></span>  
   
--   XML 名前空間プレフィックスを予約されていない値に変更します。  
+-   <span data-ttu-id="aeb63-106">XML 名前空間プレフィックスを予約されていない値に変更します。</span><span class="sxs-lookup"><span data-stu-id="aeb63-106">Change the XML namespace prefix to a value that is not reserved.</span></span>  
   
-## 参照  
- [XML Literals](../../visual-basic/language-reference/xml-literals/index.md)   
- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
+## <a name="see-also"></a><span data-ttu-id="aeb63-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="aeb63-107">See Also</span></span>  
+ [<span data-ttu-id="aeb63-108">XML リテラル</span><span class="sxs-lookup"><span data-stu-id="aeb63-108">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
+ [<span data-ttu-id="aeb63-109">XML</span><span class="sxs-lookup"><span data-stu-id="aeb63-109">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
