--- a/docs/visual-basic/misc/bc31513.md
+++ b/docs/visual-basic/misc/bc31513.md
@@ -1,31 +1,33 @@
 ---
-title: "&#39;System.STAThreadAttribute&#39; および &#39;System.MTAThreadAttribute&#39; の両方を &#39;|1&#39; に適用することはできません | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-visual-basic"
-ms.topic: "article"
-f1_keywords: 
-  - "bc31513"
-  - "vbc31513"
-helpviewer_keywords: 
-  - "BC31513"
+title: "&#39;です。'System.mtathreadattribute' &#39;および &#39;です。System.MTAThreadAttribute &#39;両方に適用することはできません (& m); #39 | 1 &#39;"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-visual-basic
+ms.topic: article
+f1_keywords:
+- bc31513
+- vbc31513
+helpviewer_keywords: BC31513
 ms.assetid: 7efb4c8e-d31c-4273-9d85-8cd2bef4d120
-caps.latest.revision: 8
-author: "stevehoag"
-ms.author: "shoag"
-caps.handback.revision: 8
+caps.latest.revision: "8"
+author: dotnet-bot
+ms.author: dotnetcontent
+ms.openlocfilehash: d82c599ee9e15b2770b64c6f2e8c053c292de2fe
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# &#39;System.STAThreadAttribute&#39; および &#39;System.MTAThreadAttribute&#39; の両方を &#39;|1&#39; に適用することはできません
-`System.STAThreadAttribute` 属性と `System.MTAThreadAttribute` 属性は相互に排他的です。  
+# <a name="39systemstathreadattribute39-and-39systemmtathreadattribute39-cannot-both-be-applied-to-39139"></a><span data-ttu-id="93890-102">&#39;です。'System.mtathreadattribute' &#39;および &#39;です。System.MTAThreadAttribute &#39;両方に適用することはできません (& m); #39 | 1 &#39;</span><span class="sxs-lookup"><span data-stu-id="93890-102">&#39;System.STAThreadAttribute&#39; and &#39;System.MTAThreadAttribute&#39; cannot both be applied to &#39;|1&#39;</span></span>
+<span data-ttu-id="93890-103">`System.STAThreadAttribute` 属性と `System.MTAThreadAttribute` 属性は相互に排他的です。</span><span class="sxs-lookup"><span data-stu-id="93890-103">The `System.STAThreadAttribute` and `System.MTAThreadAttribute` attributes are mutually exclusive.</span></span>  
   
- **エラー ID:** BC31513  
+ <span data-ttu-id="93890-104">**エラー ID:** BC31513</span><span class="sxs-lookup"><span data-stu-id="93890-104">**Error ID:** BC31513</span></span>  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a><span data-ttu-id="93890-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="93890-105">To correct this error</span></span>  
   
-1.  `System.MTAThreadAttribute` か `System.STAThreadAttribute` のいずれかを適用し、両方は適用しないでください。  
+1.  <span data-ttu-id="93890-106">`System.MTAThreadAttribute` か `System.STAThreadAttribute`のいずれかを適用し、両方は適用しないでください。</span><span class="sxs-lookup"><span data-stu-id="93890-106">Apply either `System.MTAThreadAttribute` or `System.STAThreadAttribute`, but not both.</span></span>  
   
-## 参照  
- <xref:System.STAThreadAttribute>   
- <xref:System.MTAThreadAttribute>   
- [ビルド内にありません: Visual Basic における属性](http://msdn.microsoft.com/ja-jp/620bfc0e-4582-4c8b-8432-ebc5c3dccc22)
+## <a name="see-also"></a><span data-ttu-id="93890-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="93890-107">See Also</span></span>  
+ <xref:System.STAThreadAttribute>  
+ <xref:System.MTAThreadAttribute>  
+ [<span data-ttu-id="93890-108">属性の概要</span><span class="sxs-lookup"><span data-stu-id="93890-108">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
