--- a/docs/visual-basic/misc/bc32034.md
+++ b/docs/visual-basic/misc/bc32034.md
@@ -1,30 +1,32 @@
 ---
-title: "&#39;End Set&#39; は、行の最初のステートメントでなければなりません | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-visual-basic"
-ms.topic: "article"
-f1_keywords: 
-  - "vbc32034"
-  - "bc32034"
-helpviewer_keywords: 
-  - "BC32034"
+title: "&#39;です。終了セット &#39;行の最初のステートメントをする必要があります。"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-visual-basic
+ms.topic: article
+f1_keywords:
+- vbc32034
+- bc32034
+helpviewer_keywords: BC32034
 ms.assetid: 93dc44f9-92a7-4114-b1fd-d0ba36c79556
-caps.latest.revision: 8
-author: "stevehoag"
-ms.author: "shoag"
-caps.handback.revision: 8
+caps.latest.revision: "8"
+author: dotnet-bot
+ms.author: dotnetcontent
+ms.openlocfilehash: e04b25bc23e8630a12119377341b1fb5500dee22
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# &#39;End Set&#39; は、行の最初のステートメントでなければなりません
-`End Set` ステートメントがコロン \(:\) ステートメント区切り文字の後に続いています。`End Set` はそのソース コード行でただ 1 つのステートメントである必要があります。  
+# <a name="39end-set39-must-be-the-first-statement-on-a-line"></a><span data-ttu-id="4a4ae-102">&#39;です。終了セット &#39;行の最初のステートメントをする必要があります。</span><span class="sxs-lookup"><span data-stu-id="4a4ae-102">&#39;End Set&#39; must be the first statement on a line</span></span>
+<span data-ttu-id="4a4ae-103">`End Set` ステートメントがコロン (:) ステートメント区切り文字の後に続いています。</span><span class="sxs-lookup"><span data-stu-id="4a4ae-103">An `End Set` statement follows a colon (:) statement separator.</span></span> <span data-ttu-id="4a4ae-104">`End Set` はそのソース コード行でただ 1 つのステートメントである必要があります。</span><span class="sxs-lookup"><span data-stu-id="4a4ae-104">`End Set` must be the only statement on its source line.</span></span>  
   
- **エラー ID:** BC32034  
+ <span data-ttu-id="4a4ae-105">**エラー ID:** BC32034</span><span class="sxs-lookup"><span data-stu-id="4a4ae-105">**Error ID:** BC32034</span></span>  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4a4ae-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="4a4ae-106">To correct this error</span></span>  
   
--   複数のステートメントを別々の行に分けます。  
+-   <span data-ttu-id="4a4ae-107">複数のステートメントを別々の行に分けます。</span><span class="sxs-lookup"><span data-stu-id="4a4ae-107">Separate the multiple statements onto different lines.</span></span>  
   
-## 参照  
- [方法 : コード内でステートメントを分割および連結する](../../visual-basic/programming-guide/program-structure/how-to-break-and-combine-statements-in-code.md)   
- [Set Statement](../../visual-basic/language-reference/statements/set-statement.md)
+## <a name="see-also"></a><span data-ttu-id="4a4ae-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="4a4ae-108">See Also</span></span>  
+ [<span data-ttu-id="4a4ae-109">方法 : コード内でステートメントを分割および連結する</span><span class="sxs-lookup"><span data-stu-id="4a4ae-109">How to: Break and Combine Statements in Code</span></span>](../../visual-basic/programming-guide/program-structure/how-to-break-and-combine-statements-in-code.md)  
+ [<span data-ttu-id="4a4ae-110">Set ステートメント</span><span class="sxs-lookup"><span data-stu-id="4a4ae-110">Set Statement</span></span>](../../visual-basic/language-reference/statements/set-statement.md)
