--- a/docs/visual-basic/misc/bc36662.md
+++ b/docs/visual-basic/misc/bc36662.md
@@ -1,48 +1,31 @@
 ---
-title: "Option Strict On により、ラムダ式とデリゲートの間の暗黙の型変換で縮小 &quot;&lt;delegatename&gt;&quot; |Microsoft ドキュメント"
-ms.date: 2015-07-20
+title: "Option strict On ではないを許可する、ラムダ式とデリゲート &#39; 間の暗黙的な型変換で縮小変換&lt;delegatename&gt;&#39;です。"
+ms.date: 07/20/2015
 ms.prod: .net
-ms.technology:
-- devlang-visual-basic
+ms.technology: devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - bc36662
 - vbc36662
-helpviewer_keywords:
-- BC36662
+helpviewer_keywords: BC36662
 ms.assetid: 4504497b-56ba-4631-ad7b-59975f7fee04
-caps.latest.revision: 4
+caps.latest.revision: "4"
 author: dotnet-bot
 ms.author: dotnetcontent
-translation.priority.ht:
-- de-de
-- es-es
-- fr-fr
-- it-it
-- ja-jp
-- ko-kr
-- ru-ru
-- zh-cn
-- zh-tw
-translation.priority.mt:
-- cs-cz
-- pl-pl
-- pt-br
-- tr-tr
-translationtype: Machine Translation
-ms.sourcegitcommit: a06bd2a17f1d6c7308fa6337c866c1ca2e7281c0
-ms.openlocfilehash: 0c5faf2280f64cfb41204e0928bba4997e00a8ee
-ms.lasthandoff: 03/13/2017
-
+ms.openlocfilehash: 7fb7b8daf669cec237c361a0cf33c8d55a902b9a
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-the-lambda-expression-and-delegate-39ltdelegatenamegt39"></a>Option Strict On により、ラムダ式とデリゲートの間の暗黙の型変換で縮小 '&lt;delegatename&gt;'
-`Option Strict` がオンの場合、デリゲート内のパラメーターのデータ型と、そのデリゲート型の変数に割り当てられているラムダ式の対応するパラメーターの間で縮小変換を行うことはできません。 たとえば、次のコードでは、デリゲート `Del` に型 `Integer`の&1; つのパラメーターがあります。  
+# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-the-lambda-expression-and-delegate-39ltdelegatenamegt39"></a><span data-ttu-id="92567-102">Option strict On ではないを許可する、ラムダ式とデリゲート &#39; 間の暗黙的な型変換で縮小変換&lt;delegatename&gt;&#39;です。</span><span class="sxs-lookup"><span data-stu-id="92567-102">Option Strict On does not allow narrowing in implicit type conversions between the lambda expression and delegate &#39;&lt;delegatename&gt;&#39;</span></span>
+<span data-ttu-id="92567-103">`Option Strict` がオンの場合、デリゲート内のパラメーターのデータ型と、そのデリゲート型の変数に割り当てられているラムダ式の対応するパラメーターの間で縮小変換を行うことはできません。</span><span class="sxs-lookup"><span data-stu-id="92567-103">With `Option Strict` on, you cannot have a narrowing conversion between the data type of a parameter in a delegate and the corresponding parameter of a lambda expression assigned to a variable of that delegate type.</span></span> <span data-ttu-id="92567-104">たとえば、次のコードでは、デリゲート `Del` に型 `Integer`の 1 つのパラメーターがあります。</span><span class="sxs-lookup"><span data-stu-id="92567-104">For example, in the following code, delegate `Del` has one parameter of type `Integer`.</span></span>  
   
 ```vb  
 Delegate Function Del(ByVal p As Integer) As String  
 ```  
   
- そのため、型 `Del` の変数に割り当てられているラムダ式の対応するパラメーターは、 `Integer` 、または `Integer`からの拡大変換が存在する任意のデータ型でなければなりません。  
+ <span data-ttu-id="92567-105">そのため、型 `Del` の変数に割り当てられているラムダ式の対応するパラメーターは、 `Integer` 、または `Integer`からの拡大変換が存在する任意のデータ型でなければなりません。</span><span class="sxs-lookup"><span data-stu-id="92567-105">Therefore, the corresponding parameter of any lambda expression assigned to a variable of type `Del` can be an `Integer` or any data type for which there is a widening conversion from `Integer`.</span></span>  
   
 ```vb  
 ' Valid.  
@@ -53,20 +36,20 @@ Dim example2 As Del = Function(n As Long) "Valid"
 Dim example3 As Del = Function(n As Short) "Not Valid"  
 ```  
   
- **エラー ID:** BC36662  
+ <span data-ttu-id="92567-106">**エラー ID:** BC36662</span><span class="sxs-lookup"><span data-stu-id="92567-106">**Error ID:** BC36662</span></span>  
   
-## <a name="to-correct-this-error"></a>このエラーを解決するには  
+## <a name="to-correct-this-error"></a><span data-ttu-id="92567-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="92567-107">To correct this error</span></span>  
   
--   デリゲートまたはラムダ式のパラメーターのデータ型を変更して、必要な拡大関係が存在するようにします。  
+-   <span data-ttu-id="92567-108">デリゲートまたはラムダ式のパラメーターのデータ型を変更して、必要な拡大関係が存在するようにします。</span><span class="sxs-lookup"><span data-stu-id="92567-108">Change the data type of the parameter in the delegate or the lambda expression so that the required widening relationship exists.</span></span>  
   
--   ラムダ式でパラメーターのデータ型を指定しません。 型は、デリゲートの対応するパラメーターから推定されます。  
+-   <span data-ttu-id="92567-109">ラムダ式でパラメーターのデータ型を指定しません。</span><span class="sxs-lookup"><span data-stu-id="92567-109">Do not specify parameter data types in the lambda expression.</span></span> <span data-ttu-id="92567-110">型は、デリゲートの対応するパラメーターから推定されます。</span><span class="sxs-lookup"><span data-stu-id="92567-110">Types will be inferred from the corresponding parameters in the delegate.</span></span>  
   
 ```vb  
 Dim example4 As Del = Function(n) "Valid"  
 ```  
   
-## <a name="see-also"></a>関連項目  
- [ラムダ式](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)   
- [デリゲート](../../visual-basic/programming-guide/language-features/delegates/index.md)   
- [拡大変換と縮小変換](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)   
- [厳密でないデリゲート変換](../../visual-basic/programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
+## <a name="see-also"></a><span data-ttu-id="92567-111">関連項目</span><span class="sxs-lookup"><span data-stu-id="92567-111">See Also</span></span>  
+ [<span data-ttu-id="92567-112">ラムダ式</span><span class="sxs-lookup"><span data-stu-id="92567-112">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)  
+ [<span data-ttu-id="92567-113">デリゲート</span><span class="sxs-lookup"><span data-stu-id="92567-113">Delegates</span></span>](../../visual-basic/programming-guide/language-features/delegates/index.md)  
+ [<span data-ttu-id="92567-114">拡大変換と縮小変換</span><span class="sxs-lookup"><span data-stu-id="92567-114">Widening and Narrowing Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)  
+ [<span data-ttu-id="92567-115">厳密でないデリゲート変換</span><span class="sxs-lookup"><span data-stu-id="92567-115">Relaxed Delegate Conversion</span></span>](../../visual-basic/programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
