--- a/docs/visual-basic/misc/bc42315.md
+++ b/docs/visual-basic/misc/bc42315.md
@@ -1,34 +1,36 @@
 ---
-title: "XML コメント タグ &#39;returns&#39; は、&#39;declare sub&#39; 言語要素では許可されていません | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-visual-basic"
-ms.topic: "article"
-f1_keywords: 
-  - "bc42315"
-  - "vbc42315"
-helpviewer_keywords: 
-  - "BC42315"
+title: "XML コメント タグ &#39; を返します、&#39;許可されていません、&#39; sub &#39; の宣言言語要素"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-visual-basic
+ms.topic: article
+f1_keywords:
+- bc42315
+- vbc42315
+helpviewer_keywords: BC42315
 ms.assetid: 55ba3e8a-ba7f-42e3-a4a7-b22844e72564
-caps.latest.revision: 10
-author: "stevehoag"
-ms.author: "shoag"
-caps.handback.revision: 10
+caps.latest.revision: "10"
+author: dotnet-bot
+ms.author: dotnetcontent
+ms.openlocfilehash: 3b9b9627cdfa8ee83e88b8ec707b2143ccbf5a07
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# XML コメント タグ &#39;returns&#39; は、&#39;declare sub&#39; 言語要素では許可されていません
-XML コメント タグ 'returns' は、'declare sub' 言語要素では許可されていません。 XML コメントは無視されます。  
+# <a name="xml-comment-tag-39returns39-is-not-permitted-on-a-39declare-sub39-language-element"></a><span data-ttu-id="47348-102">XML コメント タグ &#39; を返します、&#39;許可されていません、&#39; sub &#39; の宣言言語要素</span><span class="sxs-lookup"><span data-stu-id="47348-102">XML comment tag &#39;returns&#39; is not permitted on a &#39;declare sub&#39; language element</span></span>
+<span data-ttu-id="47348-103">XML コメント タグ 'returns' は、'declare sub' 言語要素では許可されていません。</span><span class="sxs-lookup"><span data-stu-id="47348-103">XML comment tag 'returns' is not permitted on a 'declare sub' language element.</span></span> <span data-ttu-id="47348-104">XML コメントは無視されます。</span><span class="sxs-lookup"><span data-stu-id="47348-104">XML comment will be ignored.</span></span>  
   
- `Declare Sub` 宣言に対する XML コメントに、`<`returns`>` タグを含めることはできません。  
+ <span data-ttu-id="47348-105">`Declare Sub` 宣言に対する XML コメントに、 `<`returns`>` タグを含めることはできません。</span><span class="sxs-lookup"><span data-stu-id="47348-105">An XML comment for a `Declare Sub` declaration cannot contain a `<`returns`>` tag.</span></span>  
   
- **エラー ID:** BC42315  
+ <span data-ttu-id="47348-106">**エラー ID:** BC42315</span><span class="sxs-lookup"><span data-stu-id="47348-106">**Error ID:** BC42315</span></span>  
   
-### このエラーを解決するには  
+## <a name="to-correct-this-error"></a><span data-ttu-id="47348-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="47348-107">To correct this error</span></span>  
   
--   サポートされていない `<`returns`>` タグを削除します。  
+-   <span data-ttu-id="47348-108">サポートされていない `<`returns`>` タグを削除します。</span><span class="sxs-lookup"><span data-stu-id="47348-108">Remove the unsupported `<`returns`>` tag.</span></span>  
   
-## 参照  
- [\<returns\>](../../visual-basic/language-reference/xmldoc/returns.md)   
- [XML Comment Tags](../../visual-basic/language-reference/xmldoc/recommended-xml-tags-for-documentation-comments.md)   
- [Documenting Your Code with XML](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)   
- [Declare Statement](../../visual-basic/language-reference/statements/declare-statement.md)
+## <a name="see-also"></a><span data-ttu-id="47348-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="47348-109">See Also</span></span>  
+ [<span data-ttu-id="47348-110">\<returns></span><span class="sxs-lookup"><span data-stu-id="47348-110">\<returns></span></span>](../../visual-basic/language-reference/xmldoc/returns.md)  
+ [<span data-ttu-id="47348-111">XML のコメント用タグ</span><span class="sxs-lookup"><span data-stu-id="47348-111">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/recommended-xml-tags-for-documentation-comments.md)  
+ [<span data-ttu-id="47348-112">XML の使用によるコードのドキュメントの作成</span><span class="sxs-lookup"><span data-stu-id="47348-112">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)  
+ [<span data-ttu-id="47348-113">Declare ステートメント</span><span class="sxs-lookup"><span data-stu-id="47348-113">Declare Statement</span></span>](../../visual-basic/language-reference/statements/declare-statement.md)
