Commit translated content

--- a/docs/csharp/misc/cs0012.md
+++ b/docs/csharp/misc/cs0012.md
@@ -1,43 +1,60 @@
 ---
-title: "コンパイラ エラー CS0012 | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-csharp"
-ms.topic: "article"
-f1_keywords: 
-  - "CS0012"
-dev_langs: 
-  - "CSharp"
-helpviewer_keywords: 
-  - "CS0012"
+title: "コンパイラ エラー CS0012"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-csharp
+ms.topic: article
+f1_keywords: CS0012
+helpviewer_keywords: CS0012
 ms.assetid: 5523e349-22f4-4b0b-b4b0-c4bf26c461f4
-caps.latest.revision: 10
-author: "BillWagner"
-ms.author: "wiwagn"
-caps.handback.revision: 10
+caps.latest.revision: "10"
+author: BillWagner
+ms.author: wiwagn
+ms.openlocfilehash: 0719b82af366ced0309ac20da2efb4ac79906dc5
+ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 10/18/2017
 ---
-# コンパイラ エラー CS0012
+# <a name="compiler-error-cs0012"></a>コンパイラ エラー CS0012
 型 'type' は、参照されていないアセンブリに定義されています。 アセンブリ 'assembly' に参照を追加する必要があります。  
   
- 参照される型の定義が見つかりませんでした。 このエラーは、必要な .DLL ファイルがコンパイル時にインクルードされていない場合に発生することがあります。 詳細については、次のトピックを参照してください。[Add Reference Dialog Box](http://msdn.microsoft.com/ja-jp/2feb0fe2-0805-4cc9-8cba-b0315849dfb7) および[\/reference \(Import Metadata\)](../../csharp/language-reference/compiler-options/reference-compiler-option.md).  
+ 参照される型の定義が見つかりませんでした。 このエラーは、必要な .DLL ファイルがコンパイル時にインクルードされていない場合に発生することがあります。 詳細については、次を参照してください。[参照の追加 ダイアログ ボックス](http://msdn.microsoft.com/en-us/2feb0fe2-0805-4cc9-8cba-b0315849dfb7)と[/reference (c# コンパイラ オプション)](../../csharp/language-reference/compiler-options/reference-compiler-option.md)です。  
   
  次のコンパイル シーケンスは CS0012 になります。  
   
 ```  
-// cs0012a.cs // compile with: /target:library public class A {}  
+// cs0012a.cs  
+// compile with: /target:library  
+public class A {}  
 ```  
   
  次のコードも同様の結果になります。  
   
 ```  
-// cs0012b.cs // compile with: /target:library /reference:cs0012a.dll public class B { public static A f() { return new A(); } }  
+// cs0012b.cs  
+// compile with: /target:library /reference:cs0012a.dll  
+public class B  
+{  
+   public static A f()  
+   {  
+      return new A();  
+   }  
+}  
 ```  
   
  次のコードも同様の結果になります。  
   
 ```  
-// cs0012c.cs // compile with: /reference:cs0012b.dll class C { public static void Main() { object o = B.f();   // CS0012 } }  
+// cs0012c.cs  
+// compile with: /reference:cs0012b.dll  
+class C  
+{  
+   public static void Main()  
+   {  
+      object o = B.f();   // CS0012  
+   }  
+}  
 ```  
   
- この CS0012 は、`/reference:cs0012b.dll;cs0012a.dll` を使用してコンパイルするか、Visual Studio で [Add Reference Dialog Box](http://msdn.microsoft.com/ja-jp/2feb0fe2-0805-4cc9-8cba-b0315849dfb7) を使用して cs0012b.dll と cs0012a.dll への参照を追加することで解決できる場合があります。
+ この CS0012 は、 `/reference:cs0012b.dll;cs0012a.dll`を使用してコンパイルするか、Visual Studio で [Add Reference Dialog Box](http://msdn.microsoft.com/en-us/2feb0fe2-0805-4cc9-8cba-b0315849dfb7) を使用して cs0012b.dll と cs0012a.dll への参照を追加することで解決できる場合があります。
