--- a/docs/csharp/misc/cs0011.md
+++ b/docs/csharp/misc/cs0011.md
@@ -1,58 +1,78 @@
 ---
-title: "コンパイラ エラー CS0011 | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-csharp"
-ms.topic: "article"
-f1_keywords: 
-  - "CS0011"
-dev_langs: 
-  - "CSharp"
-helpviewer_keywords: 
-  - "CS0011"
+title: "コンパイラ エラー CS0011"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-csharp
+ms.topic: article
+f1_keywords: CS0011
+helpviewer_keywords: CS0011
 ms.assetid: 892553d7-a516-4631-84cd-94db5722c90d
-caps.latest.revision: 18
-author: "BillWagner"
-ms.author: "wiwagn"
-caps.handback.revision: 18
+caps.latest.revision: "18"
+author: BillWagner
+ms.author: wiwagn
+ms.openlocfilehash: aebbf050396ecd3ddb325cd08de38aee758d7533
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# コンパイラ エラー CS0011
+# <a name="compiler-error-cs0011"></a>コンパイラ エラー CS0011
 型 'type' で参照されているアセンブリ 'assembly' の基底クラスまたはインターフェイス 'class' が解決できません  
   
- **\/reference** を使用してファイルからインポートされたクラスが、あるクラスの派生クラスであるか、または見つからないインターフェイスを実装しています。 このエラーは、必要な DLL が **\/reference** を使用したコンパイル時にインクルードされていない場合に発生することがあります。  
+ **/reference**を使用してファイルからインポートされたクラスが、あるクラスの派生クラスであるか、または見つからないインターフェイスを実装しています。 このエラーは、必要な DLL が **/reference**を使用したコンパイル時にインクルードされていない場合に発生することがあります。  
   
- 詳細については、次のトピックを参照してください。[Add Reference Dialog Box](http://msdn.microsoft.com/ja-jp/2feb0fe2-0805-4cc9-8cba-b0315849dfb7) および[\/reference \(Import Metadata\)](../../csharp/language-reference/compiler-options/reference-compiler-option.md).  
+ 詳細については、次を参照してください。[参照の追加 ダイアログ ボックス](http://msdn.microsoft.com/en-us/2feb0fe2-0805-4cc9-8cba-b0315849dfb7)と[/reference (c# コンパイラ オプション)](../../csharp/language-reference/compiler-options/reference-compiler-option.md)です。  
   
-## 使用例  
-  
-```  
-// CS0011_1.cs // compile with: /target:library public class Outer { public class B { } }  
-```  
-  
-## 使用例  
- 2 つ目のファイルでは、前の例で作成した `B` クラスから派生した `C` クラスを定義する DLL を作成します。  
+## <a name="example"></a>例  
   
 ```  
-// CS0011_2.cs // compile with: /target:library /reference:CS0011_1.dll // post-build command: del /f CS0011_1.dll public class C : Outer.B {}  
+// CS0011_1.cs  
+// compile with: /target:library  
+  
+public class Outer   
+{  
+   public class B { }  
+}  
 ```  
   
-## 使用例  
- 3 つ目のファイルでは、最初の手順で作成した DLL を置き換え、内部クラスである `B` の定義を省略しています。  
+## <a name="example"></a>例  
+ 2 つ目のファイルでは、前の例で作成した `C` クラスから派生した `B` クラスを定義する DLL を作成します。  
   
 ```  
-// CS0011_3.cs // compile with: /target:library /out:cs0011_1.dll public class Outer {}  
+// CS0011_2.cs  
+// compile with: /target:library /reference:CS0011_1.dll  
+// post-build command: del /f CS0011_1.dll  
+public class C : Outer.B {}  
 ```  
   
-## 使用例  
- 最後に、4 つ目のファイルで、2 番目の例で定義した `C` クラスを参照します。これは `B` クラスから派生していますが、今回、これはありません。  
+## <a name="example"></a>例  
+ 3 つ目のファイルでは、最初の手順で作成した DLL を置き換え、内部クラスである `B`の定義を省略しています。  
+  
+```  
+// CS0011_3.cs  
+// compile with: /target:library /out:cs0011_1.dll  
+public class Outer {}  
+```  
+  
+## <a name="example"></a>例  
+ 最後に、4 つ目のファイルで、2 番目の例で定義した `C` クラスを参照します。これは `B`クラスから派生していますが、今回、これはありません。  
   
  次の例では CS0011 が生成されます。  
   
 ```  
-// CS0011_4.cs // compile with: /reference:CS0011_1.dll /reference:CS0011_2.dll // CS0011 expected class M { public static void Main() { C c = new C(); } }  
+// CS0011_4.cs  
+// compile with: /reference:CS0011_1.dll /reference:CS0011_2.dll  
+// CS0011 expected  
+  
+class M  
+{  
+   public static void Main()  
+   {  
+      C c = new C();  
+   }  
+}  
 ```  
   
-## 参照  
- [Add Reference Dialog Box](http://msdn.microsoft.com/ja-jp/2feb0fe2-0805-4cc9-8cba-b0315849dfb7)   
- [\/reference \(Import Metadata\)](../../csharp/language-reference/compiler-options/reference-compiler-option.md)
+## <a name="see-also"></a>関連項目  
+ [参照の追加 ダイアログ ボックス](http://msdn.microsoft.com/en-us/2feb0fe2-0805-4cc9-8cba-b0315849dfb7)  
+ [-reference (C# コンパイラ オプション)](../../csharp/language-reference/compiler-options/reference-compiler-option.md)
