--- a/docs/csharp/misc/cs0140.md
+++ b/docs/csharp/misc/cs0140.md
@@ -1,29 +1,40 @@
 ---
-title: "コンパイラ エラー CS0140 | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-csharp"
-ms.topic: "article"
-f1_keywords: 
-  - "CS0140"
-dev_langs: 
-  - "CSharp"
-helpviewer_keywords: 
-  - "CS0140"
+title: "コンパイラ エラー CS0140"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-csharp
+ms.topic: article
+f1_keywords: CS0140
+helpviewer_keywords: CS0140
 ms.assetid: 61787b8a-7b69-41c1-8ee3-87f619698594
-caps.latest.revision: 7
-author: "BillWagner"
-ms.author: "wiwagn"
-caps.handback.revision: 7
+caps.latest.revision: "7"
+author: BillWagner
+ms.author: wiwagn
+ms.openlocfilehash: ff973ccee4299235bc0d45c7b9185e87abe1404a
+ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 10/18/2017
 ---
-# コンパイラ エラー CS0140
+# <a name="compiler-error-cs0140"></a>コンパイラ エラー CS0140
 ラベル 'label' は重複しています。  
   
- 同じ名前のラベルが 2 回使用されています。 詳細については、「[goto](../../csharp/language-reference/keywords/goto.md)」を参照してください。  
+ 同じ名前のラベルが 2 回使用されています。 詳細については、次を参照してください。 [goto](../../csharp/language-reference/keywords/goto.md)です。  
   
  次の例では CS0140 が生成されます。  
   
 ```  
-// CS0140.cs namespace MyNamespace { public class MyClass { public static void Main() { label1: int i = 0; label1: int j = 0;   // CS0140, comment this line to resolve goto label1; } } }  
+// CS0140.cs  
+namespace MyNamespace  
+{  
+   public class MyClass  
+   {  
+      public static void Main()  
+      {  
+         label1: int i = 0;  
+         label1: int j = 0;   // CS0140, comment this line to resolve  
+         goto label1;  
+      }  
+   }  
+}  
 ```
