--- a/docs/csharp/misc/cs0180.md
+++ b/docs/csharp/misc/cs0180.md
@@ -1,29 +1,39 @@
 ---
-title: "コンパイラ エラー CS0180 | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-csharp"
-ms.topic: "article"
-f1_keywords: 
-  - "CS0180"
-dev_langs: 
-  - "CSharp"
-helpviewer_keywords: 
-  - "CS0180"
+title: "コンパイラ エラー CS0180"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-csharp
+ms.topic: article
+f1_keywords: CS0180
+helpviewer_keywords: CS0180
 ms.assetid: a21bf0a2-ed5a-4ddd-88d3-240babc5888a
-caps.latest.revision: 8
-author: "BillWagner"
-ms.author: "wiwagn"
-caps.handback.revision: 8
+caps.latest.revision: "8"
+author: BillWagner
+ms.author: wiwagn
+ms.openlocfilehash: 36fa02738c804e1034281906d2afa7e1bba6bb24
+ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 10/18/2017
 ---
-# コンパイラ エラー CS0180
+# <a name="compiler-error-cs0180"></a>コンパイラ エラー CS0180
 'member' に extern と abstract の両方を指定することはできません  
   
- [abstract](../../csharp/language-reference/keywords/abstract.md) キーワードと [extern](../../csharp/language-reference/keywords/extern.md) キーワードは、同時に指定できません。`extern` キーワードは、メンバーがファイルの外部で定義されていることを意味し、**abstract** は、派生クラスで実装が提供されることを意味します。 詳細については、「[メソッド](../../csharp/programming-guide/classes-and-structs/methods.md)」を参照してください。  
+ [abstract](../../csharp/language-reference/keywords/abstract.md) キーワードと [extern](../../csharp/language-reference/keywords/extern.md) キーワードは、同時に指定できません。 `extern` キーワードは、メンバーがファイルの外部で定義されていることを意味し、 **abstract** は、派生クラスで実装が提供されることを意味します。 詳細については、「[メソッド](../../csharp/programming-guide/classes-and-structs/methods.md)」を参照してください。  
   
  次の例では CS0180 が生成されます。  
   
 ```  
-// CS0180.cs namespace MyNamespace { public class MyClass { public extern abstract int Foo(int a);   // CS0180 public static void Main() { } } }  
+// CS0180.cs  
+namespace MyNamespace  
+{  
+   public class MyClass  
+   {  
+      public extern abstract int Foo(int a);   // CS0180  
+  
+      public static void Main()  
+      {  
+      }  
+   }  
+}  
 ```
