--- a/docs/csharp/misc/cs0549.md
+++ b/docs/csharp/misc/cs0549.md
@@ -1,29 +1,34 @@
 ---
-title: "コンパイラ エラー CS0549 | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-csharp"
-ms.topic: "article"
-f1_keywords: 
-  - "CS0549"
-dev_langs: 
-  - "CSharp"
-helpviewer_keywords: 
-  - "CS0549"
+title: "コンパイラ エラー CS0549"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-csharp
+ms.topic: article
+f1_keywords: CS0549
+helpviewer_keywords: CS0549
 ms.assetid: ae965019-9dee-4f28-9e9a-6f379bd0d757
-caps.latest.revision: 8
-author: "BillWagner"
-ms.author: "wiwagn"
-caps.handback.revision: 8
+caps.latest.revision: "8"
+author: BillWagner
+ms.author: wiwagn
+ms.openlocfilehash: 484a59df2dc4fac71fafceaa924a598987e6e6cb
+ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 10/18/2017
 ---
-# コンパイラ エラー CS0549
+# <a name="compiler-error-cs0549"></a>コンパイラ エラー CS0549
 'function' はシール クラス 'class' の新しい仮想メンバーです。  
   
- [シール](../../csharp/language-reference/keywords/sealed.md) [クラス](../../csharp/language-reference/keywords/class.md)は、基底クラスとして使用できません。  したがって、シール クラスに仮想メソッドを使用しても意味がありません。  
+ A[シール](../../csharp/language-reference/keywords/sealed.md)[クラス](../../csharp/language-reference/keywords/class.md)基底クラスとして使用することはできません。  したがって、シール クラスに仮想メソッドを使用しても意味がありません。  
   
  次の例では CS0549 が生成されます。  
   
 ```  
-// CS0549.cs // compile with: /target:library sealed public class MyClass { virtual public void TestMethod() {}   // CS0549 public void TestMethod2() {}   // OK }  
+// CS0549.cs  
+// compile with: /target:library  
+sealed public class MyClass  
+{  
+   virtual public void TestMethod() {}   // CS0549  
+   public void TestMethod2() {}   // OK  
+}  
 ```
