--- a/docs/csharp/misc/cs1030.md
+++ b/docs/csharp/misc/cs1030.md
@@ -1,29 +1,35 @@
 ---
-title: "コンパイラの警告 (レベル 1) CS1030 | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-csharp"
-ms.topic: "article"
-f1_keywords: 
-  - "CS1030"
-dev_langs: 
-  - "CSharp"
-helpviewer_keywords: 
-  - "CS1030"
+title: "コンパイラの警告 (レベル 1) CS1030"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-csharp
+ms.topic: article
+f1_keywords: CS1030
+helpviewer_keywords: CS1030
 ms.assetid: 7c565abc-1366-4641-9383-ab8ba026ab96
-caps.latest.revision: 7
-author: "BillWagner"
-ms.author: "wiwagn"
-caps.handback.revision: 7
+caps.latest.revision: "7"
+author: BillWagner
+ms.author: wiwagn
+ms.openlocfilehash: cf1645679e7f0f9936d6b8955ae576a3ef8ab247
+ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 10/18/2017
 ---
-# コンパイラの警告 (レベル 1) CS1030
-\#warning: 'text'  
+# <a name="compiler-warning-level-1-cs1030"></a>コンパイラの警告 (レベル 1) CS1030
+\#警告: 'text'  
   
- [\#warning](../../csharp/language-reference/preprocessor-directives/preprocessor-warning.md) ディレクティブで定義された警告のテキストを表示します。  
+ [#warning](../../csharp/language-reference/preprocessor-directives/preprocessor-warning.md) ディレクティブで定義された警告のテキストを表示します。  
   
  次の例では、ユーザー定義の警告を作成する方法を示します。  
   
 ```  
-// CS1030.cs class Sample { static void Main() { #warning Let's give a warning here   // CS1030 } }  
+// CS1030.cs  
+class Sample  
+{  
+   static void Main()  
+   {  
+      #warning Let's give a warning here   // CS1030  
+   }  
+}  
 ```
