--- a/docs/csharp/misc/cs1621.md
+++ b/docs/csharp/misc/cs1621.md
@@ -1,36 +1,59 @@
 ---
-title: "コンパイラ エラー CS1621 | Microsoft Docs"
-ms.date: "2015-07-20"
-ms.prod: ".net"
-ms.technology: 
-  - "devlang-csharp"
-ms.topic: "article"
-f1_keywords: 
-  - "CS1621"
-dev_langs: 
-  - "CSharp"
-helpviewer_keywords: 
-  - "CS1621"
+title: "コンパイラ エラー CS1621"
+ms.date: 07/20/2015
+ms.prod: .net
+ms.technology: devlang-csharp
+ms.topic: article
+f1_keywords: CS1621
+helpviewer_keywords: CS1621
 ms.assetid: 11b4fb94-0dd7-4484-99aa-e06eacc6a658
-caps.latest.revision: 10
-author: "BillWagner"
-ms.author: "wiwagn"
-caps.handback.revision: 10
+caps.latest.revision: "10"
+author: BillWagner
+ms.author: wiwagn
+ms.openlocfilehash: d8a8b12a66b969d1c5a937bd5dbd3f7c6d137029
+ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.translationtype: MT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 11/21/2017
 ---
-# コンパイラ エラー CS1621
+# <a name="compiler-error-cs1621"></a>コンパイラ エラー CS1621
 yield ステートメントは、匿名メソッドまたはラムダ式の内部では使用できません  
   
  yield ステートメントを反復子の匿名メソッド ブロックに記述することはできません。  
   
-## 使用例  
+## <a name="example"></a>例  
  次の例では CS1621 が生成されます。  
   
 ```  
-// CS1621.cs using System.Collections; delegate object MyDelegate(); class C : IEnumerable { public IEnumerator GetEnumerator() { MyDelegate d = delegate { yield return this; // CS1621 return this; }; d(); // Try this instead: // MyDelegate d = delegate { return this; }; // yield return d(); } public static void Main() { } }  
+// CS1621.cs  
+  
+using System.Collections;  
+  
+delegate object MyDelegate();  
+  
+class C : IEnumerable  
+{  
+    public IEnumerator GetEnumerator()  
+    {  
+        MyDelegate d = delegate  
+        {  
+            yield return this; // CS1621  
+            return this;  
+        };  
+        d();  
+        // Try this instead:  
+        // MyDelegate d = delegate { return this; };  
+        // yield return d();  
+    }  
+  
+    public static void Main()  
+    {  
+    }  
+}  
 ```  
   
-## 参照  
- [反復子](../Topic/Iterators%20\(C%23%20and%20Visual%20Basic\).md)   
- [yield](../../csharp/language-reference/keywords/yield.md)   
- [ラムダ式](../../csharp/programming-guide/statements-expressions-operators/lambda-expressions.md)   
+## <a name="see-also"></a>関連項目  
+ [反復子](http://msdn.microsoft.com/library/f45331db-d595-46ec-9142-551d3d1eb1a7)  
+ [yield](../../csharp/language-reference/keywords/yield.md)  
+ [ラムダ式](../../csharp/programming-guide/statements-expressions-operators/lambda-expressions.md)  
  [匿名メソッド](../../csharp/programming-guide/statements-expressions-operators/anonymous-methods.md)
